Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -978,10 +978,10 @@
  canal_events.27.t:0 "パナマ運河の完成"
  canal_events.27.d:0 "多くの人は不可能だと主張した。それ以外の者は、遠い未来あるいは、夢の分野として考えたが、[Root.Owner.GetName]はそれを現実の分野として考えた。2つの海を結ぶアイデアにおいて、大西洋と太平洋は、非常に小さな陸地によって分断されているにすぎないにもかかわらず、常に最も遠いものに見えた。しかし、弾力性、創意工夫、そして事業に注ぎ込まれた膨大な資源によって、それは完了し、我々の船はホーン岬を周る必要なく、安全に通過することができるようになった。運河は、世紀の先駆けだと考えられており、出入口としての役割を果たすだけでなく、[Root.Owner.GetName]には何も不可能なものはないという事実の記念碑として役立つだろう。"
  canal_events.28.t:0 "[From.Owner.GetName]運河事業の遅れ"
- canal_events.28.d:0 "我々の臣民である [From.Owner.GetName]は、我々の運河の建設が、我々の制御を超えた様々な要因により遅れているとの便りを送ってきた。"
+ canal_events.28.d:0 "我々の臣民である[From.Owner.GetName]は、運河建設が、我々の制御を超えた様々な要因により遅れているとの便りを送ってきた。"
  canal_events.28.a:0 "遺憾だ"
  canal_events.29.t:0 "[From.Owner.GetName]運河事業の前倒し"
- canal_events.29.d:0 "属国である [From.Owner.GetName]は、我々の運河の建設が、この事業における彼らの熟練した操作によって、予想以上に早く進んでいるとの便りを送ってきた。"
+ canal_events.29.d:0 "我々の臣民である[From.Owner.GetName]は、運河建設が、この事業における彼らの熟練した操作によって、予想以上に早く進んでいるとの便りを送ってきた。"
  canal_events.29.a:0 "素晴らしい！"
  CS_CONFIRM_ADD_PROVINCE_TITLE:0 "衛星国に州を追加"
  CS_CONFIRM_ADD_PROVINCE_DESC:1 "§Y$PROVINCE$§!州を§Y$COUNTRY$§!$SUBJECTTYPE$に与えてもよろしいですか？"
@@ -1250,7 +1250,7 @@
  soninke:0 "ソニンケ"
  bambara:0 "バンバラ"
  bozo:0 "ボゾ"
- hausa:0 "ハウサ "
+ hausa:0 "ハウサ"
  kanuri:0 "カヌリ"
  bilala:0 "ビララ"
  fulani:0 "フラニ"
@@ -1567,7 +1567,7 @@
  flavor_guj.5.t:0 "ブルハヌッディーン・クトゥブ＝エ・アラム"
  flavor_guj.5.d:0 "我々の首都に住むスーフィーの指導者の一人は、最近、我々の王朝に対する彼の支持のためにより無遠慮になっている。我々が王国を良い方向に向けていることは、今や多くの人にとって明らかであり、これらの声明が国民の気分に与える影響は非常に肯定的である。"
  flavor_guj.5.a:0 "何と明晰な視点を持った男だろう！"
- flavor_guj.6.t:0 "ジャイナ教とヒンドゥー教の商人社会 － Vasanta Vilasa"
+ flavor_guj.6.t:0 "ジャイナ教とヒンドゥー教の商人社会 - Vasanta Vilasa"
  flavor_guj.6.d:0 "グジャラートの商人の幸福は、常に我々の王朝の心の近くにあり、我々は我々の都市で仕事をしているジャイナ教、ヒンドゥー教あるいはパールシーの交易商たちを許容するだけでなく、多くの点で奨励してきた。\nその結果、事業は最近グジャラートのあらゆる宗教の商人たちにとって非常に良いものであった。最近完成した春とクリシュナ神の儀式については、ヒンドゥー教の有名なアフマダーバードの商人が都市とその支配者を賞賛する機会を得た。\nこれは何よりも、我々の政策の成功の表れである。"
  flavor_guj.6.a:0 "素晴らしい"
  flavor_guj.6.b:0 "冒涜だ！明らかに我々の法はあまりにも手ぬるいものになっている。"
@@ -1589,11 +1589,11 @@
  flavor_guj.11.d:0 "スーフィーの指導者であり、我々の一族の支持者であるアフマド・カトゥが死去した。この偉大な人物は、複数の世代に渡ってグジャラート・スルターン朝の顧問として行動し、かつてはアーメダバードの偉大な都市の計画に参加した。この損失は王国に大きな精神的空白を残し、我々の王朝は永遠に彼の恩を感じ続けるだろう。"
  flavor_guj.11.a:0 "偉大な男を称えるために壮大な名霊廟を建設しなければ。"
  flavor_guj.11.b:0 "王国にとって重大な損失だ。"
- flavor_guj.12.t:0 "キッサ＝イ・サンジャン － グジャラートのパールシー社会"
+ flavor_guj.12.t:0 "キッサ＝イ・サンジャン - グジャラートのパールシー社会"
  flavor_guj.12.d:0 "何百年も前、ペルシアのゾロアスター教の難民の集団がグジャラートに定住し、サンジャンのパールシー社会を設立した。時代を通して、この宗教的少数派は弾力的であることを示し、この活動的な地域の発展に積極的な役割を果たした。\n最近、パールシーの聖職者は、10世紀の彼らのペルシア出国から今日までの、パールシーの口述の歴史的伝統を記録している。結果として得られるキッサ＝イ・サンジャンは確かに高級なペルシア詩の古典的な模範であるが、それは何よりも何世代にも渡ってパールシー自身が大切にする物語である。"
  flavor_guj.12.a:0 "OK"
  flavor_guj.13.t:0 "ミラト＝イ・シカンドリ"
- flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・ イブン・ムハンマド・マンジューによるミラト＝イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
+ flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・イブン・ムハンマド・マンジューによるミラト＝イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
  flavor_guj.13.a:0 "OK"
  CS_NAME_TAKEN:0 "§R称号を獲得！§!"
  enforced_reservatum_ecclesiasticum:0 "聖職者に関する留保の原則を強制"
@@ -1822,15 +1822,15 @@
  tyw_events.50.a:0 "彼らがそのような崇高な理念に忠実であることを期待しよう。"
  AUTO_TRANSPORT_CURRENT_MISSION:0 "$NAVIES|Y$は、現在$ARMIES|Y$を$TARGET|Y$に向けて輸送しています。"
  MOVE_AUTO_TRANSPORT_TITLE:0 "自動輸送"
- MOVE_AUTO_TRANSPORT_DIALOG:0 "§Y$UNIT$§! を§Y$DESTINATION$§!に自動輸送するのに$LIST$を使用しますか？"
+ MOVE_AUTO_TRANSPORT_DIALOG:0 "§Y$UNIT$§!を§Y$DESTINATION$§!に自動輸送するのに$LIST$を使用しますか？"
  EXPLORE_MISSION_SEA_TITLE:0 "未踏の海域を探検"
- EXPLORE_MISSION_SEA_DIALOG:0 "自動的にこれらの海を探検するよう$UNIT$ に命令しますか？"
+ EXPLORE_MISSION_SEA_DIALOG:0 "自動的にこれらの海を探検するよう$UNIT$に命令しますか？"
  EXPLORE_MISSION_CIRCUMNAVIGATE_TITLE:0 "地球周航"
- EXPLORE_MISSION_CIRCUMNAVIGATE_DIALOG:0 "$UNIT$ に地球周航を命じますか？これは非常に困難な任務であり、艦隊を失う結果になるかもしれません。"
+ EXPLORE_MISSION_CIRCUMNAVIGATE_DIALOG:0 "$UNIT$に地球周航を命じますか？これは非常に困難な任務であり、艦隊を失う結果になるかもしれません。"
  EXPLORE_MISSION_COAST_TITLE:0 "海岸線の地図"
- EXPLORE_MISSION_COAST_DIALOG:0 "自動的にこの沿岸の地図を描くよう$UNIT$ に命令しますか？"
+ EXPLORE_MISSION_COAST_DIALOG:0 "自動的にこの沿岸の地図を描くよう$UNIT$に命令しますか？"
  SPLIT_UNIT_AUTO_TRANSPORT_TITLE:0 "自動輸送"
- SPLIT_UNIT_MOVE_AUTO_TRANSPORT_DIALOG:0 "§Y$UNIT$§! を分割し、分割したユニットを§Y$DESTINATION$§!に自動輸送するのに$LIST$を使用しますか？"
+ SPLIT_UNIT_MOVE_AUTO_TRANSPORT_DIALOG:0 "§Y$UNIT$§!を分割し、分割したユニットを§Y$DESTINATION$§!に自動輸送するのに$LIST$を使用しますか？"
  per_najaf:0 "ナジャフの墓廟"
  desc_per_najaf:0 "アリーの最後の安息の地であるナジャフは、シーア派にとって地球上で最も神聖な場所の一つである。この聖都の守護者として、我々はこの遺跡での製作が想定されているさまざまな事業に取り組んできた。"
  per_miniature_school:0 "ペルシアの細密絵画学派"
@@ -1979,7 +1979,7 @@
  flavor_jnp.9.d:0 "ジャウンプル・スルターン朝の使者たちは、我々の属国であるカールピーのスルタンが、ムスリム女性に対してひどく下品な行為を行い、処罰されなければならないと主張している。ジャウンプルは自ら問題の解決に臨み、カールピーに対する懲罰的な遠征を望んでいる。\nカールピーの状況に関する噂も耳にするが、慎重に検討すべき決断であり、カールピーはジャウンプルとマールワーの間で争われていた古い地域であることを考えると、ジャウンプルが当初の計画より大きな計画を立てる可能性が低いとは思われない。"
  flavor_jnp.9.a:0 "ジャウンプルがカールピーを処罰することを許可する。"
  flavor_jnp.9.b:0 "我々の属国を支援するべきだ。"
- flavor_jnp.10.t:0 "カールピー － 権限が付与された"
+ flavor_jnp.10.t:0 "カールピー - 権限が付与された"
  flavor_jnp.10.d:0 "マールワーは我々の2つの国家間のより良い関係への利害において、我々がカールピーのスルタンを処罰することに同意した。"
  flavor_jnp.10.a:0 "素晴らしい！"
  flavor_jnp.11.t:0 "マールワーのスルタンは拒否した"
