--- a/source/localisation/mercantilism_l_english.yml
+++ b/source/localisation/mercantilism_l_english.yml
@@ -40,17 +40,17 @@
  mercantilism_events.7.a:0 "彼らは[Root.GetName]の一部だ。我々の利権は彼らのものなのだ。"
  mercantilism_events.7.b:0 "彼らは[Root.GetName]の一部だ。彼らの利権は我々のものなのだ。"
  mercantilism_events.8.t:0 "チョコレートの輸入"
- mercantilism_events.8.d:0 "最近、著名な経済学者たちは、我が国へのチョコレートの輸入の急速な増加について、問われ続けている。我々の隣国の一つが巧みな交易手法によって、世界中で知られている茶の供給の大部分を支配するようになった後で、これらの飲み物は[Root.GetAdjective]の人々の間でも非常に人気が高まってきた。保護主義の姿勢を取る政治家たちは、そうした贅沢品を輸入することの[Root.GetName]にとっての利益に疑問を投げかけ、隣国が影響力を持つ品物に頼って成長することは、金を国外へ流出させることになると主張している。"
+ mercantilism_events.8.d:0 "我が国のチョコレートの輸入量が近年急速に増加していることについて、著名な経済学者たちからの疑念の声が挙がっている。我々の隣国の一つがその巧みな交易手腕によって、世界的に有名なココアの供給の大部分を支配するようになった。そのため、これらの飲み物は[Root.GetAdjective]の民の間でも非常に人気が高まってきた。保護主義の政治家たちは、そうした高級品を輸入することが[Root.GetName]にとって利益となっているのかと疑うようになり、隣国が影響力を持つ品物に頼って成長することは、我が国の経済的地位を弱めるものだと主張している。"
  mercantilism_events.8.a:0 "しかし、甘い甘いチョコレートの流れは我が国に流れ込んでいる。"
  mercantilism_events.8.b:0 "この罪深い飽食の輸入を制限しろ。"
  mercantilism_events.8.c:0 "我々は積極的に砂糖に置き換えることで、チョコレートに否定的な評価を与える。"
  mercantilism_events.9.t:0 "コーヒーの輸入"
- mercantilism_events.9.d:0 "最近、著名な経済学者たちは、我が国へのコーヒー豆の輸入の急速な増加について、問われ続けている。我々の隣国の一つが巧みな交易手法によって、世界中で知られている茶の供給の大部分を支配するようになった後で、これらの飲み物は[Root.GetAdjective]の人々の間でも非常に人気が高まってきた。保護主義の姿勢を取る政治家たちは、そうした贅沢品を輸入することの[Root.GetName]にとっての利益に疑問を投げかけ、隣国が影響力を持つ品物に頼って成長することは、我が国の経済的地位を弱めるものだと主張している。"
+ mercantilism_events.9.d:0 "我が国のコーヒーの輸入量が近年急速に増加していることについて、著名な経済学者たちからの疑念の声が挙がっている。我々の隣国の一つがその巧みな交易手腕によって、世界的に有名なコーヒーの供給の大部分を支配するようになった。そのため、これらの飲み物は[Root.GetAdjective]の民の間でも非常に人気が高まってきた。保護主義の政治家たちは、そうした高級品を輸入することが[Root.GetName]にとって利益となっているのかと疑うようになり、隣国が影響力を持つ品物に頼って成長することは、我が国の経済的地位を弱めるものだと主張している。"
  mercantilism_events.9.a:0 "これら経済学者を早朝に叩き起こして対処させるべきだろうか？"
  mercantilism_events.9.b:0 "我々はこの人工的な麻薬の拡散を止めなければ。"
  mercantilism_events.9.c:0 "[Root.GetAdjective]の我々は紅茶を飲む民族だ。我々はこれを認めない。"
  mercantilism_events.10.t:0 "茶の輸入"
- mercantilism_events.10.d:0 "最近、著名な経済学者たちは、我が国への茶の輸入の急速な増加について、問われ続けている。我々の隣国の一つが巧みな交易手法によって、世界中で知られている茶の供給の大部分を支配するようになった後で、これらの飲み物は[Root.GetAdjective]の人々の間でも非常に人気が高まってきた。保護主義の姿勢を取る政治家たちは、そうした高級品を輸入することの[Root.GetName]にとっての利益に疑問を投げかけ、隣国が影響力を持つ品物に頼って成長することは、我が国の経済的地位を弱めるものだと主張している。"
- mercantilism_events.10.a:0 "もしも茶を捨てるなら、文明は速やかに付き従うだろう。"
+ mercantilism_events.10.d:0 "我が国の茶の輸入量が近年急速に増加していることについて、著名な経済学者たちからの疑念の声が挙がっている。我々の隣国の一つがその巧みな交易手腕によって、世界的に有名な茶の供給の大部分を支配するようになった。そのため、これらの飲み物は[Root.GetAdjective]の民の間でも非常に人気が高まってきた。保護主義の政治家たちは、そうした高級品を輸入することが[Root.GetName]にとって利益となっているのかと疑うようになり、隣国が影響力を持つ品物に頼って成長することは、我が国の経済的地位を弱めるものだと主張している。"
+ mercantilism_events.10.a:0 "我々が茶を捨てたなら、ただちに文明もそれに付き従うだろう。"
  mercantilism_events.10.b:0 "茶を海に放り込んでしまえ！"
  mercantilism_events.10.c:0 "我々にはコーヒーがあるのに茶が必要な人がいるのか？"
