--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -363,11 +363,11 @@
  WESLAVERAID_SETUP:0 "我々が水兵とカネのために襲撃したとき"
  WESLAVERAID_HEADER:0 "$MESSENGER$"
  WESLAVERAID_1:0 "海岸襲撃！"
- WESLAVERAID_2:0 "我が艦隊は£icon_sailors£ を補充し、金を略奪するために$WHERE$の海岸を急襲しました。"
- WESLAVERAID_3:0 "我々は$SAILORS$£icon_sailors£ と$CASH$¤を得ました。"
+ WESLAVERAID_2:0 "我が艦隊は£icon_sailors£を補充し、金を略奪するために$WHERE$の海岸を急襲しました。"
+ WESLAVERAID_3:0 "我々は$SAILORS$£icon_sailors£と$CASH$¤を得ました。"
  WESLAVERAID_4:0 "彼らの我々に対する評価が$OPINION_HIT$変化しました。"
  WESLAVERAID_6:0 "我々はこれらの奴隷をうまく利用します。"
- WESLAVERAID_LOG:0 "$WHERE$で$SAILORS$£icon_sailors£ と$CASH$¤を襲撃"
+ WESLAVERAID_LOG:0 "$WHERE$で$SAILORS$£icon_sailors£と$CASH$¤を襲撃"
  WESLAVERAID_BTN1:0 "OK"
  WESLAVERAID_BTN2:0 "OK"
  WESLAVERAID_BTN3:0 "移動"
@@ -1106,7 +1106,7 @@
  OTHERLEAVSOTHERFEDERATION_SETUP:0 "他国が連邦を離脱したとき"
  OTHERLEAVSOTHERFEDERATION_HEADER:0 "使者"
  OTHERLEAVSOTHERFEDERATION_1:0 "$ACTOR$"
- OTHERLEAVSOTHERFEDERATION_2:0 "$MONARCHTITLE$,、$ACTOR$は"
+ OTHERLEAVSOTHERFEDERATION_2:0 "$MONARCHTITLE$、$ACTOR$は"
  OTHERLEAVSOTHERFEDERATION_3:0 "連邦から離脱しました。"
  OTHERLEAVSOTHERFEDERATION_4:0 "$LEADER$"
  OTHERLEAVSOTHERFEDERATION_LOG:0 "$ACTOR$が連邦から離脱しました。"
@@ -1372,7 +1372,7 @@
  SUPPORTREBELSME_2:0 "$MONARCHTITLE$、我々は以下に支援しました。"
  SUPPORTREBELSME_3:0 "$FACTION$"
  SUPPORTREBELSME_4:0 "彼らの抑圧者である$RECIPIENT$に対する勇ましい闘争に。"
- SUPPORTREBELSME_LOG:0 " 我々は$RECIPIENT$の$FACTION$に支援しました。"
+ SUPPORTREBELSME_LOG:0 "我々は$RECIPIENT$の$FACTION$に支援しました。"
  SUPPORTREBELSME_BTN1:0 "OK"
  SUPPORTREBELSME_BTN2:0 "OK"
  SUPPORTREBELSME_BTN3:0 "移動"
@@ -1380,7 +1380,7 @@
  SUPPORTREBELSTHEM_SETUP:0 "他国が我が国での反乱を支援したとき"
  SUPPORTREBELSTHEM_HEADER:0 "$MESSENGER$"
  SUPPORTREBELSTHEM_1:0 "反乱軍を支援"
- SUPPORTREBELSTHEM_2:0 "$MONARCHTITLE$,、"
+ SUPPORTREBELSTHEM_2:0 "$MONARCHTITLE$、"
  SUPPORTREBELSTHEM_3:0 "$WHO$"
  SUPPORTREBELSTHEM_4:0 "が$FACTION$反乱勢力に資金と武器を提供しています。"
  SUPPORTREBELSTHEM_5:0 "彼らが立ち上がる前に、これらの反乱軍を鎮圧する必要があります"
@@ -1619,7 +1619,7 @@
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_4:0 "交易紛争の正当化を行っているところを$WHO$に発見されました。"
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_5:0 "対象地域：$LOCATION$"
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_6:0 "$RESULT$"
- EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_LOG:0 "我々は$LOCATION$での$ACTION$実行中に発見されました。 "
+ EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_LOG:0 "我々は$LOCATION$での$ACTION$実行中に発見されました。"
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_BTN1:0 "OK"
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_BTN2:0 "OK"
  EVILDISCOVEREDUSJUSTIFYTRADECONFLICT_BTN3:0 "移動"
@@ -1653,7 +1653,7 @@
  CREATELEADER_1:0 "$TYPE$ $NAME$"
  CREATELEADER_2:0 "$TEXT$"
  CREATELEADER_4:0 "$DESC$"
- CREATELEADER_LOG:0 "我々は$TYPE$ $NAME$を採用しました。"
+ CREATELEADER_LOG:0 "我々は$TYPE$$NAME$を採用しました。"
  CREATELEADER_BTN1:0 "OK"
  CREATELEADER_BTN2:0 "OK"
  DISMISSLEADER_TITLE:0 "指導者の罷免"
@@ -1662,7 +1662,7 @@
  DISMISSLEADER_1:0 "$TYPE$ $NAME$"
  DISMISSLEADER_2:1 "$YEAR$以来、国に忠実に奉仕してきた$GENDER$は、$JUDGEMENT$の指導者として記憶されるでしょう。"
  DISMISSLEADER_4:0 "$DESC$"
- DISMISSLEADER_LOG:0 "我々は$TYPE$ $NAME$を罷免しました。"
+ DISMISSLEADER_LOG:0 "我々は$TYPE$$NAME$を罷免しました。"
  DISMISSLEADER_BTN1:0 "OK"
  DISMISSLEADER_BTN2:0 "OK"
  CANCEL_FLEETBASING_TITLE:0 "港湾使用権の取消"
@@ -1687,7 +1687,7 @@
  NEWMONOTHER_4:0 "が、$COUNTRY$で$RISE$。"
  NEWMONOTHER_5:0 "統治：$ADM$ 外交：$DIP$ 軍事：$MIL$"
  NEWMONOTHER_6:0 "\n彼らの新しい支配者は$PERSONALITY$と言われています。"
- NEWMONOTHER_LOG:0 "$TITLE$ $FULLMONARCHNAME$が$COUNTRY$で$RISE$。"
+ NEWMONOTHER_LOG:0 "$TITLE$$FULLMONARCHNAME$が$COUNTRY$で$RISE$。"
  NEWMONOTHER_BTN1:0 "OK"
  NEWMONOTHER_BTN2:0 "OK"
  NEWMONOTHER_BTN3:0 "移動"
@@ -1780,7 +1780,7 @@
  BANKRUPT_1:0 "我々は破産しました。"
  BANKRUPT_2:0 "我々の無謀な財政政策のツケが最終的に回ってきました。これ以上の与信はなく、財務上の義務を果たすことはできません。"
  BANKRUPT_3:0 "国庫が空になったのに加え、安定度が$STABHIT$低下し、我々はすべての君主点を失いました。しかし、我々の借款は取り消され、インフレは減少しました。"
- BANKRUPT_4:0 "我々の威信と正統性は大幅に低下し、顧問は全員解雇されました。 傭兵が去り、我々の艦隊と軍隊の士気が損なわれました。"
+ BANKRUPT_4:0 "我々の威信と正統性は大幅に低下し、顧問は全員解雇されました。傭兵が去り、我々の艦隊と軍隊の士気が損なわれました。"
  BANKRUPT_5:0 "これは天罰が下ったのでしょうか？"
  BANKRUPT_LOG:0 "我々は破産しました！"
  BANKRUPT_BTN1:0 "OK"
@@ -2306,7 +2306,7 @@
  ROYMARWEACCEPT_2:0 "$MONARCHTITLE$、我々は"
  ROYMARWEACCEPT_3:0 "王室間の婚姻を受諾しました。"
  ROYMARWEACCEPT_4:0 "$RECIPIENT$と我々の関係は改善されました。"
- ROYMARWEACCEPT_LOG:0 "我々は $RECIPIENT$との王室間の婚姻を受諾しました。"
+ ROYMARWEACCEPT_LOG:0 "我々は$RECIPIENT$との王室間の婚姻を受諾しました。"
  ROYMARWEACCEPT_BTN1:0 "素晴らしい！"
  ROYMARWEACCEPT_BTN2:0 "素晴らしい！"
  ROYMARWEACCEPT_BTN3:0 "移動"
@@ -2330,7 +2330,7 @@
  ROYMAROTHERBREAK_3:0 "以下の者との"
  ROYMAROTHERBREAK_4:0 "王室間の婚姻を"
  ROYMAROTHERBREAK_5:0 "破棄しました。"
- ROYMAROTHERBREAK_6:0 " $RECIPIENT$"
+ ROYMAROTHERBREAK_6:0 "$RECIPIENT$"
  ROYMAROTHERBREAK_LOG:0 "$ACTOR$は$RECIPIENT$との王室間の婚姻を破棄しました。"
  ROYMAROTHERBREAK_BTN1:0 "OK"
  ROYMAROTHERBREAK_BTN2:0 "OK"
@@ -2425,7 +2425,7 @@
  MILALLBANOTHER_SETUP:0 "ある国が他国との同盟を破棄したとき"
  MILALLBANOTHER_HEADER:0 "使者"
  MILALLBANOTHER_1:0 "$ACTOR$"
- MILALLBANOTHER_2:0 "$MONARCHTITLE$、$ACTOR$ は"
+ MILALLBANOTHER_2:0 "$MONARCHTITLE$、$ACTOR$は"
  MILALLBANOTHER_3:0 "以下の者との軍事同盟を破棄しました。"
  MILALLBANOTHER_4:0 "$RECIPIENT$"
  MILALLBANOTHER_LOG:0 "$ACTOR$は$RECIPIENT$との軍事同盟を破棄しました。"
@@ -2505,7 +2505,7 @@
  OWNTRADEREFUSAL_1:0 "禁輸だ！"
  OWNTRADEREFUSAL_2:0 "$MONARCHTITLE$、我が国は以下の国に対し禁輸を実施しました。"
  OWNTRADEREFUSAL_3:0 "$RECIPIENT$"
- OWNTRADEREFUSAL_4:0 "さらに、我々との交易も禁止させました。 彼らはこれ以上商人を送ることはできず、滞在する商人から収入を得ることもできません。"
+ OWNTRADEREFUSAL_4:0 "さらに、我々との交易も禁止させました。彼らはこれ以上商人を送ることはできず、滞在する商人から収入を得ることもできません。"
  OWNTRADEREFUSAL_BTN1:0 "OK"
  OWNTRADEREFUSAL_BTN2:0 "OK"
  OWNTRADEREFUSAL_BTN3:0 "移動"
@@ -2918,7 +2918,7 @@
  OTHERTAKEONDEBT_1:0 "$ACTOR$"
  OTHERTAKEONDEBT_2:0 "$MONARCHTITLE$、"
  OTHERTAKEONDEBT_3:0 "$ACTOR$"
- OTHERTAKEONDEBT_4:0 "は$RECIPIENT$の対外債務$COST|Y$ ¤をすべて支払いました。"
+ OTHERTAKEONDEBT_4:0 "は$RECIPIENT$の対外債務$COST|Y$¤をすべて支払いました。"
  OTHERTAKEONDEBT_6:0 "我々は、このような重大な財政上の不始末を笑うしかありません。"
  OTHERTAKEONDEBT_LOG:0 "$ACTOR$は$RECIPIENT$の対外債務を支払いました。"
  OTHERTAKEONDEBT_BTN1:0 "OK"
@@ -3057,7 +3057,7 @@
  CANMILOTHE_3:0 "$ACTOR$"
  CANMILOTHE_4:0 "は以下が与えていた軍事通行権を取り消しました。"
  CANMILOTHE_5:0 "$RECIPIENT$"
- CANMILOTHE_6:0 "問題が醸成しているように見えます。 我々はこれで利益を得るでしょう。"
+ CANMILOTHE_6:0 "問題が醸成しているように見えます。我々はこれで利益を得るでしょう。"
  CANMILOTHE_LOG:0 "$ACTOR$が$RECIPIENT$に有していた軍事通行権を取り消した。"
  CANMILOTHE_BTN1:0 "OK"
  CANMILOTHE_BTN2:0 "OK"
@@ -3204,7 +3204,7 @@
  OTHERMILALLHONOUR_SETUP:0 "ある国が他国との軍事同盟を履行したとき"
  OTHERMILALLHONOUR_HEADER:0 "使者"
  OTHERMILALLHONOUR_1:0 "$RECIPIENT$"
- OTHERMILALLHONOUR_2:0 "$MONARCHTITLE$、$RECIPIENT$は "
+ OTHERMILALLHONOUR_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
  OTHERMILALLHONOUR_3:0 "次の国との軍事同盟を"
  OTHERMILALLHONOUR_4:0 "履行しました。"
  OTHERMILALLHONOUR_5:0 "$ACTOR$"
@@ -3283,7 +3283,7 @@
  COLONYBURNEDUS_HEADER:0 "$MESSENGER$"
  COLONYBURNEDUS_1:0 "植民地が焼かれました！"
  COLONYBURNEDUS_2:0 "$MONARCHTITLE$、我々の強大な軍は"
- COLONYBURNEDUS_3:0 " $PROVINCE$の$RECIPIENT$を焼き払いました。"
+ COLONYBURNEDUS_3:0 "$PROVINCE$の$RECIPIENT$を焼き払いました。"
  COLONYBURNEDUS_4:0 "このような不法占拠者は最初からそこにいるべきではありません。"
  COLONYBURNEDUS_LOG:0 "我々は$PROVINCE$で$RECIPIENT$の植民地を焼き払いました。"
  COLONYBURNEDUS_BTN1:0 "OK"
@@ -3376,7 +3376,7 @@
  REGENTOTHER_2:1 "$RMONARCHTITLE$、彼らの後継者は若すぎるため、"
  REGENTOTHER_3:0 "摂政が"
  REGENTOTHER_4:0 "$COUNTRY$を支配するでしょう。"
- REGENTOTHER_6:0 "このことは彼らの外交を弱体化させるでしょう。 もしや今が彼らを叩く時ではないでしょうか？"
+ REGENTOTHER_6:0 "このことは彼らの外交を弱体化させるでしょう。もしや今が彼らを叩く時ではないでしょうか？"
  REGENTOTHER_LOG:0 "現在、摂政評議会が、$COUNTRY$を支配しています。"
  REGENTOTHER_BTN1:0 "OK"
  REGENTOTHER_BTN2:0 "OK"
@@ -3413,7 +3413,7 @@
  DISBAND_2:0 "$MONARCHTITLE$、我々は以下を解散しました"
  DISBAND_3:0 "$UNIT$"
  DISBAND_4:0 "間違いなく、我が軍を構成するクズどもは酒場で給料を使い果たすでしょう。"
- DISBAND_LOG:0 "$UNIT$ は解散されました。"
+ DISBAND_LOG:0 "$UNIT$は解散されました。"
  DISBAND_BTN1:0 "OK"
  DISBAND_BTN2:0 "OK"
  DISBAND_BTN3:0 "移動"
@@ -3607,10 +3607,10 @@
  MISSSUCC_OTHER_IN_US_SETUP:0 "宗主国の宣教師が、正しく我々を支えてくれたとき"
  MISSSUCC_OTHER_IN_US_HEADER:0 "$MESSENGER$"
  MISSSUCC_OTHER_IN_US_1:0 "改宗に成功！"
- MISSSUCC_OTHER_IN_US_2:0 "$MONARCHTITLE$、$OTHER$ はようやく"
- MISSSUCC_OTHER_IN_US_3:0 " $PROV$ の異端者たちを"
+ MISSSUCC_OTHER_IN_US_2:0 "$MONARCHTITLE$、$OTHER$はようやく"
+ MISSSUCC_OTHER_IN_US_3:0 "$PROV$の異端者たちを"
  MISSSUCC_OTHER_IN_US_4:0 "唯一の真の信仰へ改宗させました！"
- MISSSUCC_OTHER_IN_US_LOG:0 "$PROV$ は、我が国王によって、我が国の国教へ改宗しました。"
+ MISSSUCC_OTHER_IN_US_LOG:0 "$PROV$は、我が国王によって、我が国の国教へ改宗しました。"
  MISSSUCC_OTHER_IN_US_BTN1:0 "OK"
  MISSSUCC_OTHER_IN_US_BTN2:0 "OK"
  MISSSUCC_OTHER_IN_US_BTN3:0 "移動"
@@ -3619,10 +3619,10 @@
  MISSSUCC_US_IN_OTHER_HEADER:0 "$MESSENGER$"
  MISSSUCC_US_IN_OTHER_1:0 "改宗に成功！"
  MISSSUCC_US_IN_OTHER_2:0 "$MONARCHTITLE$、我々はようやく"
- MISSSUCC_US_IN_OTHER_3:0 "$SUBJECT_ADJ$ の $PROV$ 州を"
+ MISSSUCC_US_IN_OTHER_3:0 "$SUBJECT_ADJ$の$PROV$州を"
  MISSSUCC_US_IN_OTHER_4:0 "$RELIGION$に改宗しました！"
  MISSSUCC_US_IN_OTHER_5:0 "$EXTRA$"
- MISSSUCC_US_IN_OTHER_LOG:0 "$PROV$ は $RELIGION$ に改宗しました。"
+ MISSSUCC_US_IN_OTHER_LOG:0 "$PROV$は$RELIGION$に改宗しました。"
  MISSSUCC_US_IN_OTHER_BTN1:0 "OK"
  MISSSUCC_US_IN_OTHER_BTN2:0 "OK"
  MISSSUCC_US_IN_OTHER_BTN3:0 "移動"
@@ -3854,7 +3854,7 @@
  UNIONWELESSER_3:0 "我々は"
  UNIONWELESSER_4:0 "$COUNTRY$の"
  UNIONWELESSER_5:0 "$TITLE$へ忠誠を誓いました。"
- UNIONWELESSER_6:0 "これは外国の支配者の気まぐれに従わなければならことを意味します。 今のところ…"
+ UNIONWELESSER_6:0 "これは外国の支配者の気まぐれに従わなければならことを意味します。今のところ…"
  UNIONWELESSER_LOG:0 "我々は$COUNTRY$の下で同君連合の下位国となりました。"
  UNIONWELESSER_BTN1:0 "OK"
  UNIONWELESSER_BTN2:0 "OK"
@@ -4145,7 +4145,7 @@
  RETURNPROV_3:0 "最終的に道理がわかり、"
  RETURNPROV_4:0 "$PROVINCE$"
  RETURNPROV_5:0 "の州を我々に返還しました。"
- RETURNPROV_LOG:0 "$ACTOR$ は我々に $PROVINCE$ を返還しました。"
+ RETURNPROV_LOG:0 "$ACTOR$は我々に$PROVINCE$を返還しました。"
  RETURNPROV_BTN1:0 "OK"
  RETURNPROV_BTN2:0 "OK"
  RETURNPROV_BTN3:0 "移動"
@@ -4306,7 +4306,7 @@
  NEWMON_3:0 "( $ADM$ £adm£ / $DIP$ £dip£ / $MIL$ £mil£ )"
  NEWMON_4:0 " $STAT$"
  NEWMON_6:0 "$MOURN$"
- NEWMON_LOG:0 "$FULLMONARCHNAME$が今、我らが栄光ある国家を統治なさいます！ "
+ NEWMON_LOG:0 "$FULLMONARCHNAME$が今、我らが栄光ある国家を統治なさいます！"
  NEWMON_BTN1:0 "OK"
  NEWMON_BTN2:0 "OK"
  NEWMON_BTN3:0 "移動"
@@ -4430,9 +4430,9 @@
  LEADERTRAIT_GAINED_HEADER:0 "指揮官の特性を獲得しました。"
  LEADERTRAIT_GAINED_1:0 "指揮官の特性を獲得しました！"
  LEADERTRAIT_GAINED_2:0 "苦労して得た戦闘経験は"
- LEADERTRAIT_GAINED_3:0 " $TYPE$ $LEADER|Y$に"
+ LEADERTRAIT_GAINED_3:0 "$TYPE$$LEADER|Y$に"
  LEADERTRAIT_GAINED_4:0 "$NAME|Y$特性を与えました。"
- LEADERTRAIT_GAINED_5:0 "これは$GENDER$ に以下のボーナスを与えます："
+ LEADERTRAIT_GAINED_5:0 "これは$GENDER$に以下のボーナスを与えます："
  LEADERTRAIT_GAINED_6:0 "$DESC$。"
  LEADERTRAIT_GAINED_LOG:0 "$LEADER$は$NAME$の特性を獲得しました。"
  LEADERTRAIT_GAINED_BTN1:0 "OK"
@@ -4917,7 +4917,7 @@
  OURFOREIGNHEIRWINS_2:0 "我々の"
  OURFOREIGNHEIRWINS_3:0 "$COUNTRYNAME$"
  OURFOREIGNHEIRWINS_4:0 "選挙に勝利し、王位に就きました。"
- OURFOREIGNHEIRWINS_5:0 "このことは威信を$PRESTIGE$、正統性を$LEGITIMACY$上昇させます。 また$ADM_BONUS$£adm£ 、$DIP_BONUS$£dip£ 、$MIL_BONUS$£mil£ を得ます。"
+ OURFOREIGNHEIRWINS_5:0 "このことは威信を$PRESTIGE$、正統性を$LEGITIMACY$上昇させます。また$ADM_BONUS$£adm£、$DIP_BONUS$£dip£、$MIL_BONUS$£mil£を得ます。"
  OURFOREIGNHEIRWINS_LOG:0 "我々の候補者$CANDIDATENAME$は$COUNTRYNAME$の王位に就きました。"
  OURFOREIGNHEIRWINS_BTN1:0 "OK"
  OURFOREIGNHEIRWINS_BTN2:0 "OK"
@@ -5032,7 +5032,7 @@
  CLAIMTOUS_1:0 "$ACTOR$"
  CLAIMTOUS_2:0 "$MONARCHTITLE$、$ACTOR$の王は非道にも、"
  CLAIMTOUS_3:0 "我が国の王位への請求権を構築しました。"
- CLAIMTOUS_4:0 "親愛なる支配者が後継者なしで死亡した場合、我々と同君連合を形成するかもしれません。 我々は、彼らよりも高い威信を維持することによってこれを避けることができます。"
+ CLAIMTOUS_4:0 "親愛なる支配者が後継者なしで死亡した場合、我々と同君連合を形成するかもしれません。我々は、彼らよりも高い威信を維持することによってこれを避けることができます。"
  CLAIMTOUS_LOG:0 "$ACTOR$は我が国の王位への請求権を構築しました。"
  CLAIMTOUS_BTN1:0 "OK"
  CLAIMTOUS_BTN2:0 "OK"
@@ -5043,7 +5043,7 @@
  CLAIMTOOTH_1:0 "$ACTOR$"
  CLAIMTOOTH_2:0 "$MONARCHTITLE$、$ACTOR$の王は"
  CLAIMTOOTH_3:0 "$RECIPIENT$への請求権を構築しました。"
- CLAIMTOOTH_4:0 "$RECIPIENT$の支配者が後継者なしで死亡した場合、彼らは同君連合を形成するかもしれません。 "
+ CLAIMTOOTH_4:0 "$RECIPIENT$の支配者が後継者なしで死亡した場合、彼らは同君連合を形成するかもしれません。"
  CLAIMTOOTH_LOG:0 "$ACTOR$は$RECIPIENT$へ王位請求権を構築しました。"
  CLAIMTOOTH_BTN1:0 "OK"
  CLAIMTOOTH_BTN2:0 "OK"
@@ -5054,7 +5054,7 @@
  WECLAIM_1:0 "王位を請求します。"
  WECLAIM_2:0 "$MONARCHTITLE$我々は$RECIPIENT$の"
  WECLAIM_3:0 "明白な王位請求権があると気づきました。"
- WECLAIM_4:0 "彼らの支配者が後継者なしで死亡し、我々が彼らより威信を持っている場合、我々は同君連合を形成することになります。 "
+ WECLAIM_4:0 "彼らの支配者が後継者なしで死亡し、我々が彼らより威信を持っている場合、我々は同君連合を形成することになります。"
  WECLAIM_LOG:0 "我々は$RECIPIENT$の王位請求権を構築しました。"
  WECLAIM_BTN1:0 "OK"
  WECLAIM_BTN2:0 "OK"
@@ -5095,8 +5095,8 @@
  IMPRELTOOTHER_BTN1:0 "OK"
  IMPRELTOOTHER_BTN2:0 "OK"
  IMPRELTOOTHER_BTN3:0 "移動"
- RELIGIOUSUNITYDESC:0 "彼らの宗教を唯一真の信仰に変えることを要求します。 彼らが拒否した場合、我々は20の威信を消費します。"
- RELIGIOUSUNITYNEWDESC:0 "一緒に祈っている家族は一緒にいます！ 彼らの宗教を「唯一真の信仰」に変えるよう要求しますか？"
+ RELIGIOUSUNITYDESC:0 "彼らの宗教を唯一真の信仰に変えることを要求します。彼らが拒否した場合、我々は20の威信を消費します。"
+ RELIGIOUSUNITYNEWDESC:0 "一緒に祈っている家族は一緒にいます！彼らの宗教を「唯一真の信仰」に変えるよう要求しますか？"
  RELIGIOUSUNITYTITLE:0 "宗教統一の強制"
  RELIGIOUSUNITYREQDESC:0 "神聖ローマ皇帝（§Y$COUNTRY$§W）は我々に$RELIGION$信仰に改宗するよう要求しています。拒否した場合、彼らに我々への開戦事由を与えることになります。"
  RELUNITYWITHUS_TITLE:0 "宗教統一の受諾"
@@ -5131,7 +5131,7 @@
  RELUNITYWITHOTHER_3:0 "$RECIPIENT$"
  RELUNITYWITHOTHER_4:0 "は"
  RELUNITYWITHOTHER_5:0 "$ACTOR$"
- RELUNITYWITHOTHER_6:0 "彼らは今 $ACTORRELIGION$信仰です。"
+ RELUNITYWITHOTHER_6:0 "彼らは今$ACTORRELIGION$信仰です。"
  RELUNITYWITHOTHER_LOG:0 "$RECIPIENT$は$ACTOR$との宗教統一を受諾しました。"
  RELUNITYWITHOTHER_BTN1:0 "OK"
  RELUNITYWITHOTHER_BTN2:0 "OK"
@@ -5499,7 +5499,7 @@
  THEYDECLINESELLPROV_3:0 "我々の"
  THEYDECLINESELLPROV_4:0 "以下の州を売却する提案を拒否しました。"
  THEYDECLINESELLPROV_5:0 "$PROVINCE$"
- THEYDECLINESELLPROV_LOG:0 "$RECIPIENT$は $PROV$を売却する我々の提案を拒否しました。"
+ THEYDECLINESELLPROV_LOG:0 "$RECIPIENT$は$PROV$を売却する我々の提案を拒否しました。"
  THEYDECLINESELLPROV_BTN1:0 "OK"
  THEYDECLINESELLPROV_BTN2:0 "OK"
  THEYDECLINESELLPROV_BTN3:0 "移動"
@@ -5860,7 +5860,7 @@
  SUPPORTINDEPENDENCEBANOTHER_SETUP:0 "ある国が他国との独立支援条約を破棄したとき"
  SUPPORTINDEPENDENCEBANOTHER_HEADER:0 "使者"
  SUPPORTINDEPENDENCEBANOTHER_1:0 "$ACTOR$"
- SUPPORTINDEPENDENCEBANOTHER_2:0 "$MONARCHTITLE$、$ACTOR$ "
+ SUPPORTINDEPENDENCEBANOTHER_2:0 "$MONARCHTITLE$、$ACTOR$"
  SUPPORTINDEPENDENCEBANOTHER_3:0 "は"
  SUPPORTINDEPENDENCEBANOTHER_4:0 "$RECIPIENT$"
  SUPPORTINDEPENDENCEBANOTHER_LOG:0 "$ACTOR$は$RECIPIENT$との独立支援の条約を破棄しました。"
@@ -6543,8 +6543,8 @@
  FORCED_SEPPUKU_MESSAGE_HEADER:0 "大名が切腹する"
  FORCED_SEPPUKU_MESSAGE_1:1 "切腹しろ！"
  FORCED_SEPPUKU_MESSAGE_2:1 "$OVERLORD|Y$からの命令に従い"
- FORCED_SEPPUKU_MESSAGE_3:1 "$DAIMYO|Y$ が切腹を受け入れました。"
- FORCED_SEPPUKU_MESSAGE_4:1 "$HESHE$ は"
+ FORCED_SEPPUKU_MESSAGE_3:1 "$DAIMYO|Y$が切腹を受け入れました。"
+ FORCED_SEPPUKU_MESSAGE_4:1 "$HESHE$は"
  FORCED_SEPPUKU_MESSAGE_5:1 "$WARNAME|Y$"
  FORCED_SEPPUKU_MESSAGE_6:1 "$DATE$に罪人として告知した。"
  FORCED_SEPPUKU_MESSAGE_LOG:1 "$OVERLORD$が我々の大名に切腹を強いた"
@@ -6696,7 +6696,7 @@
  TRIBUTE_REFUSED_TITLE:0 "貢物を送ることを拒否した"
  TRIBUTE_REFUSED_SETUP:0 "我々の朝貢国が朝貢を拒否したとき"
  TRIBUTE_REFUSED_HEADER:0 "宰相からの報告"
- TRIBUTE_REFUSED_1:0 "§Y$ACTOR$§!は何の貢物も送らない！ "
+ TRIBUTE_REFUSED_1:0 "§Y$ACTOR$§!は何の貢物も送らない！"
  TRIBUTE_REFUSED_2:0 "我々の朝貢国である$ACTOR$は"
  TRIBUTE_REFUSED_3:0 "我々が今年彼らに要求していた§Y$AMOUNT$§!の$TYPE$の貢物を"
  TRIBUTE_REFUSED_4:0 "送ることを拒否しました。"
@@ -6762,9 +6762,9 @@
  DRILL_SKILL_GAIN_HEADER:0 "$GENERAL$がスキルを獲得"
  DRILL_SKILL_GAIN_1:0 "閣下"
  DRILL_SKILL_GAIN_2:0 "我々の努力が報われています。"
- DRILL_SKILL_GAIN_3:1 "$ARMY$ の訓練中、"
- DRILL_SKILL_GAIN_4:0 "$GENERAL$ は"
- DRILL_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire  / $SHOCK$£military_view_icon_shock  / $MANEUVER$£military_view_icon_maneuver  / $SIEGE$£military_view_icon_siege ）を獲得しました。"
+ DRILL_SKILL_GAIN_3:1 "$ARMY$の訓練中、"
+ DRILL_SKILL_GAIN_4:0 "$GENERAL$は"
+ DRILL_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire£/ $SHOCK$£military_view_icon_shock£/ $MANEUVER$£military_view_icon_maneuver£/ $SIEGE$£military_view_icon_siege£）を獲得しました。"
  DRILL_SKILL_GAIN_6:0 "この新しい技能は、我々の戦争に勝利をもたらします！"
  DRILL_SKILL_GAIN_LOG:0 "$GENERAL$、$SKILL$を獲得"
  DRILL_SKILL_GAIN_BTN1:0 "OK"
@@ -6949,7 +6949,7 @@
  FLAGSHIP_SKILL_GAIN_2:0 "我々の努力が報われています。"
  FLAGSHIP_SKILL_GAIN_3:1 "$FLAGSHIP$上で、"
  FLAGSHIP_SKILL_GAIN_4:0 "$ADMIRAL$は、"
- FLAGSHIP_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire / $SHOCK$£military_view_icon_shock / $MANEUVER$£military_view_icon_maneuver ）。"
+ FLAGSHIP_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire£/ $SHOCK$£military_view_icon_shock£/ $MANEUVER$£military_view_icon_maneuver£）。"
  FLAGSHIP_SKILL_GAIN_6:0 "この新しい技能は、我々の戦争に勝利をもたらします！"
  FLAGSHIP_SKILL_GAIN_LOG:0 "$ADMIRAL$、$SKILL$を獲得"
  FLAGSHIP_SKILL_GAIN_BTN1:0 "OK"
@@ -6963,7 +6963,7 @@
  MINORITY_EXPELLED_3:0 "$PROVINCE$のマイノリティは"
  MINORITY_EXPELLED_4:0 "ついに$COLONY$へ追放されました！"
  MINORITY_EXPELLED_5:1 "今や都市には$RELIGION$の教えに従う$CULTURE$文化の国民が住んでいます。"
- MINORITY_EXPELLED_6:1 "マイノリティは植民地の開発を$ADM|Y$£adm $DIP|Y$£dip $MIL|Y$£mil 増加させました。"
+ MINORITY_EXPELLED_6:1 "マイノリティは植民地の開発を$ADM|Y$£adm£$DIP|Y$£dip£$MIL|Y$£mil£増加させました。"
  MINORITY_EXPELLED_LOG:0 "$PROVINCE$のマイノリティ、海外に追放された！"
  MINORITY_EXPELLED_BTN1:0 "いい厄介払いだ！"
  MINORITY_EXPELLED_BTN2:0 "いい厄介払いだ！"
