--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -172,7 +172,7 @@
  DLC_dlc091_TOOLTIP_INSTANT:0 "Hindu Unit Pack"
  DLC_dlc091_TOOLTIP_DELAYED:0 "- ゴンドワナ、メーワール、ネパール、オリッサと南インドの小国向け20種類の新しいユニットモデル"
  DLC_dlc092_TOOLTIP_INSTANT:0 "Indian Sultanate Unit Pack"
- DLC_dlc092_TOOLTIP_DELAYED:0 "- バフマニー、グジャラート, ジャウンプル、マールワーとムガル向け20種類の新しいユニットモデル"
+ DLC_dlc092_TOOLTIP_DELAYED:0 "- バフマニー、グジャラート、ジャウンプル、マールワーとムガル向け20種類の新しいユニットモデル"
  DLC_dlc093_TOOLTIP_INSTANT:1 "Dharma Advisor Portraits Pack"
  DLC_dlc093_TOOLTIP_DELAYED:0 "- インド国家及び文化圏向け42種類の男女の顧問の肖像"
  DLC_dlc094_TOOLTIP_INSTANT:0 "Dharma Music Pack"
@@ -249,7 +249,7 @@
  LANDING_dlc009_TEXT:0 "主な要素：\n- 地形MAPモードで見ることのできる11種類の新しいランドマーク"
  LANDING_dlc009_FLAVOR_TEXT:0 "このパックは、MAPに新しいランドマークを追加し、ゲームMAPにさまざまな機能を提供することでゲーム体験を高めます。"
  LANDING_dlc011_TEXT:0 "主な要素：\n- 新世界におけるスペイン、ポルトガル向け16種類の新しいユニットモデル"
- LANDING_dlc011_FLAVOR_TEXT:0 "Conquistadors Unit PackでEuropa Universalis IVのプレイ体験を高めましょう。 このパックは、新世界に配備されたイベリアのユニットに新しいユニットモデルを追加します。"
+ LANDING_dlc011_FLAVOR_TEXT:0 "Conquistadors Unit PackでEuropa Universalis IVのプレイ体験を高めましょう。このパックは、新世界に配備されたイベリアのユニットに新しいユニットモデルを追加します。"
  LANDING_dlc012_TEXT:0 "主な要素：\n- チェロキー、イロコイ、スー等のネイティブ・アメリカン国家向け8種類の新しいユニットモデル"
  LANDING_dlc012_FLAVOR_TEXT:0 "このパックは、北アメリカのいくつかの原住民国家向けに固有のユニットグラフィックを追加します。"
  LANDING_dlc013_TEXT:0 "主な要素：\n- ネイティブ・アメリカンと海外に州を保有する国家向け3種類の新しい楽曲"
@@ -322,7 +322,7 @@
  LANDING_dlc058_FLAVOR_TEXT:0 "このユニットパックは、アルジェ、モロッコ、マムルークとチュニス向け16種類の新しいユニットモデルにより、Europa Universalis IVのプレイ体験を高めます。"
  LANDING_dlc059_TEXT:0 "主な要素：\n- Kairi 'Blodeuyn' Sawler作曲、極東地域からインスピレーションを得た5種類の新しい楽曲"
  LANDING_dlc059_FLAVOR_TEXT:1 "熱心なEuropa UniversalisファンであるKairi Sawlerによる2番目のサウンドトラックで、Europa Universalis IVに新しい変化とインスピレーションを追加しましょう！ハン国の草原から南太平洋の海岸まで、極東の地域からインスピレーションを得た音楽で歴史の音を呼び起こしてください。"
- LANDING_dlc061_TEXT:0 "主な要素：\n- バイエルン、ハノーファーとザクセン等のドイツの公国向け24種類の新しい レベル1及び3ユニットモデル"
+ LANDING_dlc061_TEXT:0 "主な要素：\n- バイエルン、ハノーファーとザクセン等のドイツの公国向け24種類の新しいレベル1及び3ユニットモデル"
  LANDING_dlc061_FLAVOR_TEXT:1 "このユニットパックは、中央ヨーロッパの著名ないくつかの公国向け24種類の新しいレベル1及び3ユニットモデルにより、Europa Universalis IVのプレイ体験を高めます。"
  LANDING_dlc062_TEXT:0 "主な要素：\n- アイル、カネム・ボルヌとマリ等の西アフリカ国家向け32種類の新しいユニットモデル"
  LANDING_dlc062_FLAVOR_TEXT:0 "このユニットパックは、西アフリカの8カ国向け32種類の新しいユニットモデルにより、Europa Universalis IVのプレイ体験を高めます。"
@@ -333,7 +333,7 @@
  LANDING_dlc065_TEXT:0 "主な要素：\n- スカンディナヴィア国家プレイ向け15種類の新しい楽曲"
  LANDING_dlc065_FLAVOR_TEXT:2 "スカンディナヴィアの超大国としてプレイし、18世紀スウェーデンの伝統的な歌のこのコレクションにより、あなたの人々の音楽を世界の祝歌としましょう。\n\nスウェーデンの詩人で作詞家のCarl Michael Bellmanが作ったFredman's Epistlesの中から15曲が作曲家Tobias Gustavssonによって編曲され、スウェーデンの歌手で俳優のMikael Samuelsonによって演奏されています。"
  LANDING_dlc067_TEXT:0 "主な要素：\n- 伊達、今川と上杉等の日本の大名向け12種類の新しいレベル1ユニットモデル"
- LANDING_dlc067_FLAVOR_TEXT:0 "東洋の軍隊は、Europa Universalis IV：Mandate of Heaven用の新しいコンテンツパックで光り輝く新しい姿となります。Paradoxのアーティストたちは、近世初期の中国、日本、およびその隣国の軍服や武器についての新鮮な見解を得るため、歴史書を深く読み込みました。\n\nこのユニットパックはいくつかの日本の有名な大名向けに12種類の新しいレベル1ユニットモデルを追加します。"
+ LANDING_dlc067_FLAVOR_TEXT:0 "東洋の軍隊は、Europa Universalis IV：Mandate of Heaven用の新しいコンテンツパックで光り輝く新しい姿となります。Paradoxのアーティストたちは、近世初期の中国、日本、およびその隣国の軍服や武器についての新鮮な見解を得るため、歴史書を深く読み込みました。\n\nこのユニットパックはいくつかの日本の有名な大名向けに12種類の新しいレベル1ユニットモデルを追加します。"
  LANDING_dlc068_TEXT:0 "主な要素：\n- 日本、朝鮮、明、清向け16種類の新しいユニットモデル"
  LANDING_dlc068_FLAVOR_TEXT:0 "東洋の軍隊は、Europa Universalis IV：Mandate of Heaven用の新しいコンテンツパックで光り輝く新しい姿となります。Paradoxのアーティストたちは、近世初期の中国、日本、およびその隣国の軍服や武器についての新鮮な見解を得るため、歴史書を深く読み込みました。\n\nこのユニットパックは日本、朝鮮、明と清向けに16種類の新しいユニットモデルを追加します。"
  LANDING_dlc069_TEXT:0 "主な要素：\n- チャガタイ、満州、モンゴルとオイラトの部族軍向け16種類の新しいユニットモデル"
@@ -374,7 +374,7 @@
  LANDING_dlc089_FLAVOR_TEXT:0 "Yannick SüßとRobin Birnerによって作られた、イギリス国家向けの新しい3種類の楽曲をお楽しみください。"
  LANDING_dlc091_TEXT:0 "主な要素：\n- ゴンドワナ、メーワール、ネパール、オリッサと南インドの小国向け20種類の新しいユニットモデル"
  LANDING_dlc091_FLAVOR_TEXT:0 "ゴンドワナ、メーワール、ネパール、オリッサと南インドの小国向け20種類の新しいユニットモデルにより、Europa Universalis IVのプレイ体験を高めましょう。"
- LANDING_dlc092_TEXT:0 "主な要素：\n- バフマニー、グジャラート, ジャウンプル、マールワーとムガル向け20種類の新しいユニットモデル"
+ LANDING_dlc092_TEXT:0 "主な要素：\n- バフマニー、グジャラート、ジャウンプル、マールワーとムガル向け20種類の新しいユニットモデル"
  LANDING_dlc092_FLAVOR_TEXT:0 "バフマニー、グジャラート、ジャウンプル、マールワーとムガル向け20種類の新しいユニットモデルにより、Europa Universalis IVのプレイ体験を高めましょう。"
  LANDING_dlc093_TEXT:0 "主な要素：\n- インド国家及び文化圏向け42種類の男女の顧問の肖像"
  LANDING_dlc093_FLAVOR_TEXT:1 "このポートレートパックは、インド国家及び文化圏向けに42種類の新しい肖像（男性21、女性21）を追加します。"
@@ -492,7 +492,7 @@
  dlc039_reason_hre_reason:1 "\n§Y神聖ローマ帝国§!内の国家を選択しているため、このDLCを推奨します。"
  dlc040_reason_christian_theocracy:0 "§YTheocracies Unit Pack§!は§Yリヴォニア騎士団、チュートン騎士団§!その他の§Y騎士団§!、§Y教皇領§!等の多くの§Yキリスト教の神権制§!国家向けに16種類の新しいユニットモデルを追加します。"
  dlc040_reason_christian_theocracy_reason:1 "\n§Yキリスト教の神権国家§!を選択しているため、このユニットパックを推奨します。"
- dlc041_reason_buddhists:1 "「§YBuddhists Unit Pack§!」 は§Yチベット§!、§Yラーンサーン§!、§Yキャンディ§!と§Y大越§!等の多くの§Yアジアの仏教国§!向けに、16種類の新しいユニットモデルを追加します。"
+ dlc041_reason_buddhists:1 "「§YBuddhists Unit Pack§!」は§Yチベット§!、§Yラーンサーン§!、§Yキャンディ§!と§Y大越§!等の多くの§Yアジアの仏教国§!向けに、16種類の新しいユニットモデルを追加します。"
  dlc041_reason_buddhists_reason:1 "\n§Y仏教§!国を選択しているため、このユニットパックを推奨します。"
  dlc042_reason_great_nation:0 "「§YGreat Nations Unit Pack§!」は§Yグレートブリテン§!、§Yロシア§!、§Yオスマン§!等の§Yヨーロッパ§!と§Yユーラシア§!の§Y列強§!向けに17種類の新しいユニットモデルを追加します。"
  dlc042_reason_great_nation_reason:2 "\nこのパックの一部である新しいユニットモデルが得られる§Y偉大な国家§!を選択しているため、このユニットパックを推奨します。"
@@ -528,7 +528,7 @@
  dlc055_reason_slave_raids_reason:1 "\n海岸の襲撃を使用する国家を選択しているため、このDLCを推奨します。"
  dlc055_reason_merchants:0 "「§YMare Nostrum Expansion§!」は海軍ミッション、バルバリア海賊やコンドッティエーリといったシステムに加え、商人共和国が貿易同盟を立ち上げる機能を追加します。"
  dlc055_reason_merchants_reason:1 "\n§Y商人共和国§!を選択しているため、このDLCを推奨します。"
- dlc056_reason_italy:0 "「§YItalian Unit Pack§!」 は§Yイタリア§!の主要な国家向けに4種類の史実に基づいた歩兵デザインを追加します。"
+ dlc056_reason_italy:0 "「§YItalian Unit Pack§!」は§Yイタリア§!の主要な国家向けに4種類の史実に基づいた歩兵デザインを追加します。"
  dlc056_reason_in_italy_reason:1 "\n§Yイタリア§!の国家を選択しているため、このユニットパックを推奨します。"
  dlc057_reason_in_east_africa:0 "「§YEast African Unit Pack§!」は§Yアフリカの角§!周辺の主要な国家向けに4種類の史実に基づいた歩兵デザインを追加します。"
  dlc057_reason_in_east_africa_reason:1 "\n§Y東アフリカ§!の国家を選択しているため、このユニットパックを推奨します。"
@@ -547,7 +547,7 @@
  dlc061_reason_in_hre_reason:1 "\n§Y神聖ローマ帝国§!内の国家を選択しているため、このユニットパックを推奨します。"
  dlc062_reason_west_africa:0 "「§YWest African Unit Pack§!」は§Y西アフリカ§!の国家向けに新しい軍隊モデルとテクスチャを追加します。"
  dlc062_reason_west_africa_reason:1 "\n§Y西アフリカ§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc063_reason_europe:0 "「§YSongs of Regency Music Pack§!」 は§YRights of Man§!での追加コンテンツの補完のため作曲された4種類の楽曲を追加します。"
+ dlc063_reason_europe:0 "「§YSongs of Regency Music Pack§!」は§YRights of Man§!での追加コンテンツの補完のため作曲された4種類の楽曲を追加します。"
  dlc063_reason_europe_reason:1 "\n§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
  dlc065_reason_sweden:0 "「§YFredman's Epistles Music Pack§!」は18世紀スウェーデンの伝統的な15曲のコレクションを追加します。"
  dlc065_reason_sweden_reason:1 "\n§Yスウェーデン§!を選択しているため、この音楽パックを推奨します。"
