--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -98,7 +98,7 @@
  HOLY_ORDER_NOT_AVAILABLE:0 "§Rこの修道会を設立できません：§!"
  ESTABLISH_COST:0 "この修道会を設立するには、$COST|Y$ $ICON$ のコストがかかるでしょう。"
  CONFIRM_ESTABLISH_HOLY_ORDER:0 "修道会の設立"
- CONFIRM_ESTABLISH_HOLY_ORDER_DESC:0 "$ORDER|Y$ 修道会を $STATE|Y$ に設立してもよろしいですか？一度設立すると変更することはできません。設立すると以下の効果があるでしょう：\n\n$EFFECTS$"
+ CONFIRM_ESTABLISH_HOLY_ORDER_DESC:0 "$ORDER|Y$修道会を$STATE|Y$に設立してもよろしいですか？一度設立すると変更することはできません。設立すると以下の効果があるでしょう：\n\n$EFFECTS$"
  HOLY_ORDER_ESTABLISHED:0 "$ORDER|Y$修道会が$STATE|Y$に設立しました。\n"
  HOLY_ORDER_CANNOT_AFFORD:0 "§R今、この修道会を設立する余裕はありません。§!\n"
  HOLY_ORDER_NOT_ESTABLISHED:0 "$ORDER|Y$修道会が$STATE|Y$に設立していない。\n"
@@ -149,8 +149,8 @@
  COLONIZE_PROVINCE:0 "州の植民地化"
  EXPEL_MINORITIES:0 "マイノリティを追放する"
  SEND_COLONIST:0 "植民者を送る"
- SEND_COLONIST_TOOLTIP:0 "$PROVINCE|Y$ に植民者を派遣する。\n植民者は我々の主要文化と宗教を持った植民地を作る。"
- SEND_COLONIST_LABEL_TOOLTIP:0 "$PROVINCE|Y$ に植民者を派遣することができる。\n植民者は我々の主要文化と宗教を持った植民地を作る。"
+ SEND_COLONIST_TOOLTIP:0 "$PROVINCE|Y$に植民者を派遣します。\n植民者は我々の主要文化と宗教を持った植民地を作ります。"
+ SEND_COLONIST_LABEL_TOOLTIP:0 "$PROVINCE|Y$に植民者を派遣することができます。\n植民者は我々の主要文化と宗教を持った植民地を作ります。"
  SEND_COLONIST_TOOLTIP_EXTRA:0 "追い払いたいマイノリティがいるなら、この州はマイノリティの追放にも適格です。"
  EXPEL_MINORITY_TOOLTIP:0 "$PROVINCE|Y$にマイノリティを追放することができます。\nマイノリティの州の文化と宗教は新しい植民地へと移り、代わりに我が国の主要文化と宗教へと変更されます。"
  SELECT_MINORITY_TOOLTIP:0 "$MINORITY|Y$のマイノリティを$PROVINCE|Y$に追放することにより、我が国の文化と宗教を持つ国民がゆっくりと取って代わります。"
@@ -213,7 +213,7 @@
  mechanic_admirals_become_rulers_no:0 ""
  pirates.1.t:0 "[Root.GovernmentName]の選挙"
  pirates.1.desc:0 "盗人や人殺しの国を支配する[Root.Monarch.GetTitle]の唯一の政治思想は何者にも支配されないことだ。それはサメを放牧するような仕事だが、勇敢なあるいは愚鈍な魂によってその役割が果たさなければならない。\n\n[Root.Monarch.GetTitle]を再び選択する時だ。[Root.Monarch.GetName]は[Root.Monarch.GetHerHis]の権限を放棄することを考えていない。[Root.Monarch.GetName]は集まった海賊たちに説得か恫喝によって[Root.Monarch.GetHerHis]による統治が[Root.Monarch.GetHerHis]の対立候補の統治よりも優れていることを納得させなくてはならない。"
- pirates.1.desc2:0 "[Root.Monarch.GetName]は、ほとんどの海賊が辿るであろう運命を迎えた。残酷で早すぎる最期を。 乗組員は新しい[Root.Monarch.GetTitle]を選ぶための集会に呼ばれた。\n\n盗人や人殺しの国を支配する[Root.Monarch.GetTitle]の唯一の政治思想は何者にも支配されないことだ。それはサメを放牧するような仕事だが、勇敢なあるいは愚鈍な魂によってその役割を果たさなければならない。"
+ pirates.1.desc2:0 "[Root.Monarch.GetName]は、ほとんどの海賊が辿るであろう運命を迎えた。残酷で早すぎる最期を。乗組員は新しい[Root.Monarch.GetTitle]を選ぶための集会に呼ばれた。\n\n盗人や人殺しの国を支配する[Root.Monarch.GetTitle]の唯一の政治思想は何者にも支配されないことだ。それはサメを放牧するような仕事だが、勇敢なあるいは愚鈍な魂によってその役割を果たさなければならない。"
  pirates.1.keep:0 "$MONARCH$の留任"
  historical_pirate_tooltip:0 "この支配者を再選することには、共和的伝統を消費しません。"
  pirates.1.a:0 "やり手の海賊だ。"
@@ -327,7 +327,7 @@
  order_events.1.b:0 "我が国が償いを行えば、おそらく交易を行うように彼らを説得できるでしょう。"
  order_events.1.c:0 "修道士の愚かな文章など国家政策の根拠にはならない。"
  order_events.2.t:0 "魔女に与える鉄槌"
- order_events.2.d:1 "中央ヨーロッパで記されたと思われる魔術に関する本が[maleficarum_province.GetName]のドミニコ会で見出された。魔女に与える鉄槌（ Malleus Maleficarum）は、魔女が社会にもたらす危険性について警告するだけでなく、魔女に対処する手順を規定している。魔術と思われる行いを異端と認定し、宮廷は告訴を受け入れ相応しい罰を与えるべきだと主張している。\n\n[maleficarum_province.GetName]のドミニコ会の修道士たちの間でその本の妥当性について見解が統一されているとはとても言えないが、修道会から発表すべきと考えている者もいる。その本の行く末に関して議論が続けられる。"
+ order_events.2.d:1 "中央ヨーロッパで記されたと思われる魔術に関する本が[maleficarum_province.GetName]のドミニコ会で見出された。魔女に与える鉄槌（Malleus Maleficarum）は、魔女が社会にもたらす危険性について警告するだけでなく、魔女に対処する手順を規定している。魔術と思われる行いを異端と認定し、宮廷は告訴を受け入れ相応しい罰を与えるべきだと主張している。\n\n[maleficarum_province.GetName]のドミニコ会の修道士たちの間でその本の妥当性について見解が統一されているとはとても言えないが、修道会から発表すべきと考えている者もいる。その本の行く末に関して議論が続けられる。"
  order_events.2.a:0 "この知恵を国中に広めよう！"
  order_events.2.b:0 "学問のために修道院で保管しておくように。"
  order_events.2.c:0 "一冊もこの本を残すな。"
@@ -397,7 +397,7 @@
  manufacturing_center:0 "帝国の製造中心地"
  manufacturing_center_desc:0 "市民こそ我が国の交易帝国の力の源である。外国の生産品を輸入し我が国で加工している。"
  council_of_the_indies_reform:0 "インディアス枢機会議"
- council_of_the_indies_reform_desc:0 "我が国の広大な植民地領は、国王に直接報告する中央行政を持つ必要がある。 個々の副王がそれぞれの領土を統治すれども、枢機会議は最高の植民地権力となり、この法廷が我が国の法を新世界の最も離れた地にまで及ばせるだろう。"
+ council_of_the_indies_reform_desc:0 "我が国の広大な植民地領は、国王に直接報告する中央行政を持つ必要がある。個々の副王がそれぞれの領土を統治すれども、枢機会議は最高の植民地権力となり、この法廷が我が国の法を新世界の最も離れた地にまで及ばせるだろう。"
  council_of_captains_reform:0 "船長会議"
  council_of_captains_reform_desc:0 "海賊共和国は、その偉大な艦長の意思によって統治されるべきだ。我々の国家を一つにまとめるのは彼らの協力関係であり、彼らの決定は他のどの権威よりも優先されなければならない。"
  articles_of_agreement_reform:0 "契約覚書"
@@ -469,7 +469,7 @@
  expel_minority_events.2.a:0 "彼らに任せよう。これがそもそもの目標であった。"
  expel_minority_events.2.b:0 "止めさせよ。彼らのいる場所は我々が必要とする場所である。"
  expel_minority_events.3.t:0 "[Root.GetName]にいる最後の[expelling_province.Culture.GetName]文化の人"
- expel_minority_events.3.d:0 "[expelling_province.GetName]にいる[expelling_province.Religion.GetName]の[expelling_province.Culture.GetName]文化の人々は、長年にわたり、[Root.GetAdjective]社会の中で文化的にも宗教的にもマイノリティであると言われてきました。今、彼らは、唯一自分たちが居る事の出来た場所 －[expelling_province.GetName]から追放されています。\n\n[expelling_province.GetName]に未来がないと見ていますので、ここでの彼らの存在はますます脅かされています。多くの人は今、そのような敵対的環境の中に長く留まりすぎた影響を恐れています。むしろ我々が望んでいた管理された移住ではなく、彼らはすぐに立ち去り、ここに留まる最後の人になりたいと思う人は誰もいません。"
+ expel_minority_events.3.d:0 "[expelling_province.GetName]にいる[expelling_province.Religion.GetName]の[expelling_province.Culture.GetName]文化の人々は、長年にわたり、[Root.GetAdjective]社会の中で文化的にも宗教的にもマイノリティであると言われてきました。今、彼らは、唯一自分たちが居る事の出来た場所、[expelling_province.GetName]から追放されています。\n\n[expelling_province.GetName]に未来がないと見ていますので、ここでの彼らの存在はますます脅かされています。多くの人は今、そのような敵対的環境の中に長く留まりすぎた影響を恐れています。むしろ我々が望んでいた管理された移住ではなく、彼らはすぐに立ち去り、ここに留まる最後の人になりたいと思う人は誰もいません。"
  expel_minority_events.3.a:0 "完全に計画通りという訳ではないな。"
  expel_minority_events.4.t:0 "[expelling_province.Culture.GetName]文化難民の[expelling_province.GetName]からの逃亡"
  expel_minority_events.4.d:0 "[expelling_province.Culture.GetName]文化の大部分の人々は、彼らを[expelling_colony.GetName]にある植民地へ転居させる取り組みに従っているが、中にはこの状況から抜け出す方法を模索している者もいる。[expelling_province.GetName]が我々の取り組みの第一目標であるため、隣の州へ逃げることは一つの方法である。\n\nこれは明らかに我々の計画の邪魔をしようという試みではあるが、その者たちが近隣に移住するのを阻止しようとした所で、それは彼らが元々の計画に従うことを意味するわけではない。それどころか彼らは別の場所に散り散りとなり、その状況は我が支配からさらに遠くへ逃れることになるだろう。"
