--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -17,21 +17,21 @@
  NUM_MORE_OR_EQUAL_FEDERATION_ADVANCEMENTS_TRIGGER:0 "連邦の進歩を$NUM|Y$以上制定する必要があります。"
  ANY_FEDERATION_MEMBER:0 "いずれかの連邦加盟国：\n"
  ALL_FEDERATION_MEMBER:0 "全ての連邦加盟国：\n"
- FEDERATION_SIZE_LESS_THAN:0 "Less than $SIZE|Y$ federation members.\n"
+ FEDERATION_SIZE_LESS_THAN:0 "連邦メンバーが$SIZE|Y$未満\n"
  FEDERATION_SIZE_MORE_THAN:0 "$SIZE|Y$以上の連邦加盟国がある。\n"
  ENABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を有効にする\n"
  DISABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を無効にする\n"
  MODIFIER_YEARLY_FEDERATION_FAVOR_GROWTH:0 "年間連邦好感度成長"
  MODIFIER_MONTHLY_REFORM_PROGRESS_MODIFIER:0 "月間政府改革進捗度補正"
  TRIBAL_DEVELOPMENT_VALUE:0 "部族発展度から：$VAL|Y0$"
- TRIBAL_DEVELOPMENT_INCREASE_EXPLANATION:0 "Random category will grow by $VAL|+$:\n"
- PROVINCE_SETTLE_TOOLTIP_DESC:0 "Will settle our people in the province making it belong to us fully and relocate $ADM|Y$£adm£, $DIP|Y$£dip£, $MIL|Y$£mil£ Development to it.\n\n"
+ TRIBAL_DEVELOPMENT_INCREASE_EXPLANATION:0 "開発度が$VAL|+$だけランダムに上昇します：\n"
+ PROVINCE_SETTLE_TOOLTIP_DESC:0 "自国の者たちをその州に定住させることで、その州を完全に自国に組み込み、$ADM|Y$£adm£、$DIP|Y$£dip£、$MIL|Y$£mil£分の開発度をその州に移します。\n\n"
  SETTLE_PROVINCE_COST:0 "$COST|Y$$POWER|$力コスト\n"
- MIGRATE_PROVINE_NOT_LAND:0 "§R$PROV|Y$ is not settleable land.\n"
- DEVASTATION_FROM_PASSIVE:0 "Natural Recovery: $VAL|-$\n"
- COHESION_FEDERATION_ADVANCEMENT:0 "§Y$NUM$ Federal Advancements§!: $VAL|+=1$\n"
- MODIFIER_SETTLE_COST:0 "Settle Cost"
- MODIFIER_MONTHLY_FEDERATION_FAVOR_GROWTH:0 "Monthly Federation Favor Growth"
+ MIGRATE_PROVINE_NOT_LAND:0 "§R$PROV|Y$は移住できない領地です。\n"
+ DEVASTATION_FROM_PASSIVE:0 "自然の回復：$VAL|-$\n"
+ COHESION_FEDERATION_ADVANCEMENT:0 "§Y$NUM$連邦の進歩§!：$VAL|+=1$\n"
+ MODIFIER_SETTLE_COST:0 "定住コスト"
+ MODIFIER_MONTHLY_FEDERATION_FAVOR_GROWTH:0 "毎月の連邦好感度上昇"
  federal_constitution:0 "連邦憲法"
  unified_warbands:0 "統一された略奪団"
  mutual_trust:0 "相互信頼"
@@ -40,24 +40,24 @@
  united_resistance:0 "統一された抵抗運動"
  chartered_settlements:0 "認められた定住地"
  shared_knowledge:0 "知識の共有"
- FEDERATION_ADVANCEMENT_ALREADY_PICKED:0 "§RAdvancement already picked.§!\n"
- FEDERATION_LEADER_LOW_COHESION:0 "\nIf Federation Cohesion drops to §Y0%§! then you risk a leadership change. The new leader will be whoever is strongest in the federation, if that is the same country then the federation will disband."
- RELIGION_DONT_HAVE_ANCESTORS:1 "Your religion doesn't have Ancestors."
- IS_NOT_OUR_PREV_MONARCH:1 "$WHO|Y$ is not one of our previous monarchs."
- IS_ALREADY_ANCESTOR:1 "$WHO|Y$ is already an ancestor."
- ANCESTOR_DIP_COST:1 "You do not have $VAL|Y$£dip£ Power."
- CONFIRM_PICK_ANCESTOR_DESC:0 "Are you sure you want to make $MONARCH|Y$ a part of our ancestral story? It will give us the following:\n$EFFECT$\n\nThis will cost us $COST|Y$£dip£ power."
- CONFIRM_PICK_ANCESTOR:0 "Confirm Pick Ancestor"
- SETTLE_PROVINCE_EFFECT:0 "$TAG$ will settle $PROV$.\n"
- ALREADY_TRIBAL_LAND_OF:0 "§R$PROV|Y$ is already tribal land of $WHO|Y$.§!\n"
- MIGRATORY_TRIBE_NOT_ON_PROVINCE:0 "§!Tribe is not currently in $PROV|Y$.§!\n"
- IS_NOT_NEIGHBOR_TO_SETTLED:0 "§R$PROV|Y$ is not neighboring any of our settled land.§!\n"
- IS_NOT_CONNECTED_TO_TRIBAL_LAND:0 "§RIs not connected to tribal land.§!\n"
- MODIFIER_ADD_TRIBAL_LAND_COST:0 "Add Tribal Land Cost"
- ADD_TRIBAL_LAND_COL_WIN:0 "Add Tribal"
- MUST_BE_IN_TRIBAL_LAND_TO_SETTLE:0 "Must be in Tribal Land to settle."
- TRIBAL_LAND_OF:0 "\nTribal land of $WHO|Y$.\n"
- FEDERATION_PROV_TOOLTIP:0 "\nPart of the $NAME|Y$."
+ FEDERATION_ADVANCEMENT_ALREADY_PICKED:0 "§R既に選択済の進歩です。§!\n"
+ FEDERATION_LEADER_LOW_COHESION:0 "\n連邦結束力が§Y0％§!まで落ち込んでしまうと、リーダー交代のリスクが発生します。連邦内で最も強い国家が新リーダーに任命され、もし、それが同一国だった場合、連邦は解体されてしまいます。"
+ RELIGION_DONT_HAVE_ANCESTORS:1 "あなたの宗教には祖霊がいません。"
+ IS_NOT_OUR_PREV_MONARCH:1 "$WHO|Y$は自国の歴代の君主の一人ではありません。"
+ IS_ALREADY_ANCESTOR:1 "$WHO|Y$は既に祖霊になっています。"
+ ANCESTOR_DIP_COST:1 "外交力$VAL|Y$£dip£がありません。"
+ CONFIRM_PICK_ANCESTOR_DESC:0 "本当に$MONARCH|Y$を私たちの先祖の物語の一部にしますか？実行しますと、以下の効果を得ることができます：\n$EFFECT$\n\nこの実行には、外交力$COST|Y$£dip£を消費します。"
+ CONFIRM_PICK_ANCESTOR:0 "祖霊選択の確認"
+ SETTLE_PROVINCE_EFFECT:0 "$TAG$は$PROV$に定住しました。\n"
+ ALREADY_TRIBAL_LAND_OF:0 "§R$PROV|Y$は既に$WHO|Y$の部族領です。§!\n"
+ MIGRATORY_TRIBE_NOT_ON_PROVINCE:0 "§!部族は現在、$PROV|Y$にいません。§!\n"
+ IS_NOT_NEIGHBOR_TO_SETTLED:0 "§R$PROV|Y$は、私たちの定住済の領地のいずれとも隣接していません。§!\n"
+ IS_NOT_CONNECTED_TO_TRIBAL_LAND:0 "§R部族領と接続してません。§!\n"
+ MODIFIER_ADD_TRIBAL_LAND_COST:0 "部族領追加コスト"
+ ADD_TRIBAL_LAND_COL_WIN:0 "部族領追加"
+ MUST_BE_IN_TRIBAL_LAND_TO_SETTLE:0 "定住には部族領でなければなりません。"
+ TRIBAL_LAND_OF:0 "\n$WHO|Y$の部族領です。\n"
+ FEDERATION_PROV_TOOLTIP:0 "\n$NAME|Y$の一部です。"
  native_chiefdom_reform:0 "酋長国"
  native_federation_reform:0 "連邦"
  native_clan_council_reform:0 "氏族評議会"
@@ -77,53 +77,53 @@
  story_tradition:0 "物語の伝統"
  legal_basis:0 "法的基盤"
  national_identity:0 "国家の独自性"
- mechanic_enable_settled_mechanics_yes:0 "Can settle development into tribl land"
- mechanic_enable_tribal_grazing_no:0 "No longer graze on land causing devastation"
+ mechanic_enable_settled_mechanics_yes:0 "開発度を部族領に定着可能"
+ mechanic_enable_tribal_grazing_no:0 "荒廃によってもはや牧草地ではない"
  MIGRATORY_TRIBE_CULTURE_CONV:0 "§R移住可能部族は文化を変更できません。§!"
- vassal_overlord_title:0 "Overlord"
- cb_native_american_tribal_feud_desc:0 "We can take tribal land from our neighbours."
- MIGRATE_AT_WAR:0 "§RCan't migrate while at war!§!"
- PEACEOFFER_MIGRATORY_NOT_TRIBAL_LAND:0 "§RNot part of Migratory Tribes Tribal Land, use Force Migrate treaty instead!§!"
- ancestor_just_personality:0 "Just"
- ancestor_righteous_personality:0 "Righteous"
- ancestor_tolerant_personality:0 "Tolerant"
- ancestor_kind_hearted_personality:0 "Kind Hearted"
- ancestor_free_thinker_personality:0 "Free Thinker"
- ancestor_well_connected_personality:0 "Well Connected"
- ancestor_calm_personality:0 "Calm"
- ancestor_careful_personality:0 "Careful"
- ancestor_secretive_personality:0 "Secretive"
- ancestor_intricate_web_weaver_personality:0 "Intricate Web Weaver"
- ancestor_benevolent_personality:0 "Benevolent"
- ancestor_zealot_personality:0 "Zealot"
- ancestor_pious_personality:0 "Pious"
- ancestor_lawgiver_personality:0 "Lawgiver"
- ancestor_midas_touched_personality:0 "Midas Touched"
- ancestor_incorruptible_personality:0 "Incorruptible"
- ancestor_architectural_visionary_personality:0 "Architectural Visionary"
- ancestor_scholar_personality:0 "Scholar"
- ancestor_entrepreneur_personality:0 "Entrepreneur"
- ancestor_industrious_personality:0 "Industrious"
- ancestor_expansionist_personality:0 "Expansionist"
- ancestor_charismatic_negotiator_personality:0 "Charismatic Negotiator"
- ancestor_silver_tongue_personality:0 "Silver Tongue"
- ancestor_conqueror_personality:0 "Conqueror"
- ancestor_tactical_genius_personality:0 "Tactical Genius"
- ancestor_bold_fighter_personality:0 "Bold Fighter"
- ancestor_strict_personality:0 "Strict"
- ancestor_inspiring_leader_personality:0 "Inspiring Leader"
- ancestor_martial_educator_personality:0 "Martial Educator"
- ancestor_navigator_personality:0 "Navigator"
- ancestor_fierce_negotiator_personality:0 "Fierce Negotiator"
+ vassal_overlord_title:0 "宗主国"
+ cb_native_american_tribal_feud_desc:0 "隣国から部族領を奪うことができます。"
+ MIGRATE_AT_WAR:0 "§R戦争中につき、移住できません!§!"
+ PEACEOFFER_MIGRATORY_NOT_TRIBAL_LAND:0 "§R移住部族の部族領の一部ではありません。代わりに、移住の強制の講和を使用しましょう!§!"
+ ancestor_just_personality:0 "公正"
+ ancestor_righteous_personality:0 "廉直"
+ ancestor_tolerant_personality:0 "寛容"
+ ancestor_kind_hearted_personality:0 "情け深い"
+ ancestor_free_thinker_personality:0 "自由思想家"
+ ancestor_well_connected_personality:0 "豊富な縁故"
+ ancestor_calm_personality:0 "穏和"
+ ancestor_careful_personality:0 "慎重"
+ ancestor_secretive_personality:0 "秘密主義者"
+ ancestor_intricate_web_weaver_personality:0 "複雑な諜報網織工"
+ ancestor_benevolent_personality:0 "慈善"
+ ancestor_zealot_personality:0 "狂信者"
+ ancestor_pious_personality:0 "敬虔"
+ ancestor_lawgiver_personality:0 "立法者"
+ ancestor_midas_touched_personality:0 "ミダスの手"
+ ancestor_incorruptible_personality:0 "清廉潔白"
+ ancestor_architectural_visionary_personality:0 "先見的建築家"
+ ancestor_scholar_personality:0 "学者"
+ ancestor_entrepreneur_personality:0 "事業家"
+ ancestor_industrious_personality:0 "勤勉"
+ ancestor_expansionist_personality:0 "拡張主義者"
+ ancestor_charismatic_negotiator_personality:0 "カリスマ交渉人"
+ ancestor_silver_tongue_personality:0 "雄弁"
+ ancestor_conqueror_personality:0 "征服者"
+ ancestor_tactical_genius_personality:0 "戦術の天才"
+ ancestor_bold_fighter_personality:0 "勇敢な戦士"
+ ancestor_strict_personality:0 "厳格"
+ ancestor_inspiring_leader_personality:0 "鼓舞する指導者"
+ ancestor_martial_educator_personality:0 "戦争教育者"
+ ancestor_navigator_personality:0 "探検家"
+ ancestor_fierce_negotiator_personality:0 "熾烈な交渉人"
  MIGRATION_BASE_COST:0 "基本：§Y50§!\n"
- MIGRATION_MULTIPLIER:0 "Outside of Tribal Land: §Yx§!$MULT|Y$\n"
+ MIGRATION_MULTIPLIER:0 "部族領の領外：§Yx§!$MULT|Y$\n"
  MIGRATION_MODIFIER:0 "これはさらに以下のような補正を受けます：\n$MOD$"
  NATIVE_TRIBES_CANT_COLONISE:0 "§R先住民部族は入植できません。§!"
- FEDERATION_ADVANCEMENT_NO_FEDERATION:0 "§RNot part of a Federation.§!"
- NOT_MIGRATORY_TRIBE_TRIGGER:0 "Not Migratory Tribe\n"
- MIGRATORY_TRIBE_TRIGGER:0 "Is Migratory Tribe\n"
+ FEDERATION_ADVANCEMENT_NO_FEDERATION:0 "§R連邦の一部ではありません。§!"
+ NOT_MIGRATORY_TRIBE_TRIGGER:0 "移住部族ではありません\n"
+ MIGRATORY_TRIBE_TRIGGER:0 "移住部族です\n"
  native_diplomatic_cermonies_reform:0 "外交儀礼"
  native_hereditary_reform:0 "世襲による統治"
- SETTLE_PROVINCE_NO_DEVELOPMENT:0 "§RNot enough tribal development to settle province.§!"
- BUILDING_SLOT_NATIVE_IN_NON_NATIVE:0 "Natives can't build in non-native land"
- BUILDING_SLOT_NON_NATIVE_IN_NATIVE:0 "Non-natives can't build in native land"
+ SETTLE_PROVINCE_NO_DEVELOPMENT:0 "§R州に定住を行うだけの部族開発度が足りていません。§!"
+ BUILDING_SLOT_NATIVE_IN_NON_NATIVE:0 "先住民は先住民ではない領地には建造できません"
+ BUILDING_SLOT_NON_NATIVE_IN_NATIVE:0 "先住民ではない国家が先住民の領地に建造することはできません"
