--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -46,7 +46,7 @@
  mch_burma_campaign_desc:0 "本当に多くの明の支持者が、シャンとビルマの首長の間にある避難所を求めてビルマの丘陵へと逃げた。彼らに、天命を正当に保持する者たちから隠れる場所などどこにもないことを示さねばならない。"
  mch_subjugate_dai_viet_title:0 "大越の平定"
  mch_subjugate_dai_viet_desc:0 "大越の主は中華様式を好んでおり、儒教の官僚機構さえ模倣している。彼らの見せかけは所詮見せかけに過ぎず、真の皇帝に服従させねばならない。"
- devastate_china_tooltip2:0 "§Y華南§!地方か、もしくは§Y西南§!地方で、開発度§Y 25§!以上の州を自国で領有する"
+ devastate_china_tooltip2:0 "§Y華南§!地方か、もしくは§Y西南§!地方で、開発度§Y25§!以上の州を自国で領有する"
  mch_mountain_title:0 "山の聖地"
  mch_mountain_desc:0 "朝鮮人が白頭とも呼ぶブクリ山は、我が民族の起源とされる聖地だ。伝説によると、山の湖に住んでいた天女がカササギの落とした果実で妊娠した。彼女の息子は初代女真族の族長となった。その山の近くに神殿を建造し、先祖に敬意を表さねばならない。"
  breached_great_wall:0 "万里の長城の突破"
@@ -284,7 +284,7 @@
  JAP_issue_new_erizeni_rei_title:0 "新撰銭令の発布"
  JAP_issue_new_erizeni_rei_desc:0 "健全な財政は安定した政府の基盤だ。秩序を維持し、交易を継続して行うには、良貨の安定的な流入を奨励せねばならない。"
  JAP_survey_the_secret_fields_title:0 "隠田の調査"
- JAP_survey_the_secret_fields_desc:0 "農民が代官には見えていない農地、いわゆる「隠田 」を持ち続けていることは、恥ずかしくなるほど地方では当たり前のことだ。これら報告されていない地所を徹底的に数え上げ、報告させることは、経済と財政の健全性強化に大いに役立つはずだ。"
+ JAP_survey_the_secret_fields_desc:0 "農民が代官には見えていない農地、いわゆる「隠田」を持ち続けていることは、恥ずかしくなるほど地方では当たり前のことだ。これら報告されていない地所を徹底的に数え上げ、報告させることは、経済と財政の健全性強化に大いに役立つはずだ。"
  JAP_construct_the_gokaido_title:0 "五街道の整備"
  JAP_construct_the_gokaido_desc:0 "国内の敵対者は鎮定したが、これら領主を支配下に置き続けることが重要だ。新たな道路網と宿駅の制度を構築することで、首都から大名領へと到達しやすくなるとともに、道中沿いの地域経済を活性化させる手助けとなるだろう。"
  JAP_permit_ryogaesho_title:0 "両替商の許可"
@@ -296,11 +296,11 @@
  JAP_siberian_intervention_title:0 "シベリア出兵"
  JAP_siberian_intervention_desc:0 "満州と千島列島へ関与するには新しい国境防衛が必要だ。シベリアのタイガは最も魅惑的な土地ではないかもしれないが、より豊かな自国領を攻撃しようとする、いかなる西の勢力に対しても素晴らしい防衛の最前線となるだろう。"
  JAP_sankin_kotai_title:0 "参勤交代"
- JAP_sankin_kotai_desc:0 "ひどい領主を単に投獄して反乱を招く危険を冒すのではなく、彼らを定期的に首都に出仕させることを義務付けることで、彼らの力を低下させ、併合するという、より巧妙な手法を用いることが出来る。「参勤交代 」政策を採用すると、領主は自領と首都に居住地を持ち続けざるを得なくなり、当然その往来は豪華な行列で、ということになる。これらの全費用は、非常に裕福な領主以外の全員を破産させ、私兵維持に必要な資金の貯蓄を妨害することになるだろう。それはまた、首都における自身の兵力を強化し、廷臣や外交官にとって非常に魅力ある場所にするだろう。"
+ JAP_sankin_kotai_desc:0 "ひどい領主を単に投獄して反乱を招く危険を冒すのではなく、彼らを定期的に首都に出仕させることを義務付けることで、彼らの力を低下させ、併合するという、より巧妙な手法を用いることができる。「参勤交代」政策を採用すると、領主は自領と首都に居住地を持ち続けざるを得なくなり、当然その往来は豪華な行列で、ということになる。これらの全費用は、非常に裕福な領主以外の全員を破産させ、私兵維持に必要な資金の貯蓄を妨害することになるだろう。それはまた、首都における自身の兵力を強化し、廷臣や外交官にとって非常に魅力ある場所にするだろう。"
  JAP_encourage_financial_cliques_title:0 "財閥の奨励"
- JAP_encourage_financial_cliques_desc:0 "経済が成長するにつれ、商人階級は必然的に富と権力を増してきた。表向き、社会的地位は最下層であるが、これほど裕福で、経済通の者たちを下に見るのは困難なことだ。おそらく、積極的にこれら商人を支援し、彼らの発展を手助けする時が来たのであろう…このような商業複合体を何と呼ぶべきなのだろうか？「財閥」 とでも呼ぶべきなのか？"
+ JAP_encourage_financial_cliques_desc:0 "経済が成長するにつれ、商人階級は必然的に富と権力を増してきた。表向き、社会的地位は最下層であるが、これほど裕福で、経済通の者たちを下に見るのは困難なことだ。おそらく、積極的にこれら商人を支援し、彼らの発展を手助けする時が来たのであろう…このような商業複合体を何と呼ぶべきなのだろうか？「財閥」とでも呼ぶべきなのか？"
  JAP_emperor_of_china_title:0 "帝国の天命"
- JAP_emperor_of_china_desc:0 "我々はかつて中国から「小人 」と呼ばれていたが、今では我々の手により、中国が小さくなっている！天子は全く平等ではない。他全ての支配者に対し、天皇が彼らより上位にあるということを強く主張せねばならない。"
+ JAP_emperor_of_china_desc:0 "我々はかつて中国から「小人」と呼ばれていたが、今では我々の手により、中国が小さくなっている！天子は全く平等ではない。他全ての支配者に対し、天皇が彼らより上位にあるということを強く主張せねばならない。"
  JAP_secure_the_pacific_title:0 "太平洋の確保"
  JAP_secure_the_pacific_desc:0 "大きくなるにつれ、防衛の必要性も高まる。拡大の機会を求めて西へと目を向ける一方で、東の広大な太平洋側も警戒せねばならない。その方向からどんな脅威が来るか、一体誰が知っているというのだ？領有権を理由に他国が東から攻撃してこないよう、我々の力を太平洋の島々に誇示するのは賢明な手段といえよう。"
  JAP_regulate_the_social_order_title:0 "社会階級の管理"
@@ -406,7 +406,7 @@
  kor_defeat_shogun_title:0 "将軍の打倒"
  kor_defeat_shogun_desc:0 "日本の豊かな土地は、収奪の頃合いを迎えている。日本の帝都である京都を占領できれば、我が征服へのさらなる抵抗はすぐに消え去る。"
  kor_turtle_ships_title:0 "亀甲船の出帆"
- kor_turtle_ships_desc:1 "我々の造船技師は新型の重装船に関する計画を立てた。発射された弾から乗組員を守るための側面部や屋根を覆う固い外板から着想を得て、彼らはそれを亀船または 「亀甲船」 と呼んでいる。この新しい艦船の恐るべき外観とその防御力は、朝鮮が守り切るために必要となる制海権を決して失わないことを保証するだろう！"
+ kor_turtle_ships_desc:1 "我々の造船技師は新型の重装船に関する計画を立てた。発射された弾から乗組員を守るための側面部や屋根を覆う固い外板から着想を得て、彼らはそれを亀船または「亀甲船」と呼んでいる。この新しい艦船の恐るべき外観とその防御力は、朝鮮が守り切るために必要となる制海権を決して失わないことを保証するだろう！"
  kor_turtle_fleets:0 "亀甲船"
  desc_kor_turtle_fleets:0 "亀船、もしくは「亀甲船」は、日本の朝鮮出兵(1592年ー1598年)の際、朝鮮海軍が使用した大型艦船の一種で、日本の制海権確保を阻み、最終的には退却を余儀なくさせた。名前の由来は船の防護部分、亀の甲羅のような形をした屋根の覆いからである。\n\n時折、これが始めて鉄で被覆された艦船であると主張されることもあるが、実際に鉄板を用いて建造されたものがあったかどうかは不明である。"
  kor_settle_north_title:0 "北部への移住"
@@ -509,9 +509,9 @@
  leadered_peasant_rebels_name:0 "$COUNTRY$の農民"
  leadered_peasant_rebels_desc:0 "恐ろしい盗賊の指導者に率いられた農民の反乱軍は、圧政と厳しい課税を十分に受けていた。彼らは装備も訓練も不十分で、主に歩兵構成である。"
  leadered_peasant_rebels_army:0 "農民軍"
- DEVELOPMENT_IN_PROVINCES:0 "領有する州の開発度$DEVELOPMENT$（現在値: $CURRENT|Y$）"
- string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きましたー朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風であるー「小中国」  となりました。一方で中国側は李氏朝鮮を 「東方の礼儀正しい民の国」 と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えています－目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ！"
- string_start_jurchens:1 "漢民族は、§Y女真族§!が団結した際の危険性をよく知っています。12世紀、女真族の将軍§Y阿骨打§!は、女真族を統一させ、§Y遼§!に蜂起し、§Y金§!国を設立し、自らを§Y太祖皇帝§!と名乗りました。§Y明§!王朝は再び女真族が蜂起しないよう願っており、どの一族も力を持ちすぎないよう彼らがその一族間で戦い続けるように措置を講じています。この目的のために、明は§Y建州§!と§Y海西§!の女真族に対して緩い宗主の立場を確立しました。\n\n女真族の中で、建州女真は群を抜いて強力です。海西と同様、彼らは定住民族です。中国支配の制度や思想が徐々にこの地方へ浸透し、現地の漢民族に受容されつつあります。\n\n中国の支配や慣習に侵食されているにもかかわらず、定住した女真族は、北方の 「野生の女真族」 の伝統と戦士文化のほぼ同じものを持ち続けています。§Y野人§!、§Y兀狄哈§!、§Y東海§!の遊牧民族は決して非力ではなく、互いに戦いあわねばならず、§Yソロン§!族と§Yニブフ§!族は相対的に孤立しています。\n\n§Y朝鮮§!は度々女真族と対立しており、最近になって、建州女真の氏族から東北地方の§Y六鎮§!と§Y京城§!を併合しました。女真族も朝鮮人も§Y白頭山§!を聖地と捉えており、互いに自分たちだけが神聖なる山頂を訪れることができると信じています。\n\n女真族と§Yモンゴル族§!の関係性は絶えず変化しています。時には盟友、時には恨み重なる相手であり、双方の民族の部族が政治的な関係確保のためにしばしば結婚し、王家同士の確執も見られます。§Yウネボラト・ハン§!配下の§Yホルチン§!のモンゴル族は東部で支配的な存在になり、もし封じ込めされなければ、女真族の領地への拡大に目を向けるかもしれません。\n\n女真族は金の時代を懐かしく思い出します。もし彼らが部族間の分裂を克服し、モンゴル族を寄せ付けないことができれば、彼らは新しい指導者の下で再び立ち上がり、明を打ち負かし、自ら新しい独自性を作り上げることができるでしょう。"
+ DEVELOPMENT_IN_PROVINCES:0 "領有する州の開発度$DEVELOPMENT$（現在値：$CURRENT|Y$）"
+ string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きました－朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風である－「小中国」となりました。一方で中国側は李氏朝鮮を「東方の礼儀正しい民の国」と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えています－目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ！"
+ string_start_jurchens:1 "漢民族は、§Y女真族§!が団結した際の危険性をよく知っています。12世紀、女真族の将軍§Y阿骨打§!は、女真族を統一させ、§Y遼§!に蜂起し、§Y金§!国を設立し、自らを§Y太祖皇帝§!と名乗りました。§Y明§!王朝は再び女真族が蜂起しないよう願っており、どの一族も力を持ちすぎないよう彼らがその一族間で戦い続けるように措置を講じています。この目的のために、明は§Y建州§!と§Y海西§!の女真族に対して緩い宗主の立場を確立しました。\n\n女真族の中で、建州女真は群を抜いて強力です。海西と同様、彼らは定住民族です。中国支配の制度や思想が徐々にこの地方へ浸透し、現地の漢民族に受容されつつあります。\n\n中国の支配や慣習に侵食されているにもかかわらず、定住した女真族は、北方の「野生の女真族」の伝統と戦士文化のほぼ同じものを持ち続けています。§Y野人§!、§Y兀狄哈§!、§Y東海§!の遊牧民族は決して非力ではなく、互いに戦いあわねばならず、§Yソロン§!族と§Yニブフ§!族は相対的に孤立しています。\n\n§Y朝鮮§!は度々女真族と対立しており、最近になって、建州女真の氏族から東北地方の§Y六鎮§!と§Y京城§!を併合しました。女真族も朝鮮人も§Y白頭山§!を聖地と捉えており、互いに自分たちだけが神聖なる山頂を訪れることができると信じています。\n\n女真族と§Yモンゴル族§!の関係性は絶えず変化しています。時には盟友、時には恨み重なる相手であり、双方の民族の部族が政治的な関係確保のためにしばしば結婚し、王家同士の確執も見られます。§Yウネボラト・ハン§!配下の§Yホルチン§!のモンゴル族は東部で支配的な存在になり、もし封じ込めされなければ、女真族の領地への拡大に目を向けるかもしれません。\n\n女真族は金の時代を懐かしく思い出します。もし彼らが部族間の分裂を克服し、モンゴル族を寄せ付けないことができれば、彼らは新しい指導者の下で再び立ち上がり、明を打ち負かし、自ら新しい独自性を作り上げることができるでしょう。"
  chahar_area:0 "チャハル"
  cicigar_area:0 "チチガル"
  flavor_oir.8.t:0 "ジュンガル"
@@ -716,12 +716,12 @@
  empire_of_china_nomadic_border_events.3.t:0 "[From.GetUsableNameCap]の遊牧民の恐怖"
  empire_of_china_nomadic_border_events.3.d:0 "[From.GetAdjective][From.Monarch.GetTitle]の属国の間では、我々が代表となっている脅威に宗主が手も足も出ていないという不満の声が上がっています。我々の力が成長し続けるにつれて、このような不満の声は大きくなることが期待できます。"
  empire_of_china_nomadic_border_events.3.opt:0 "彼らの崩壊を待つ必要があります。"
- empire_of_china_nomadic_border_events.3.tooltip:0 "§Y[From.GetName]§!:\n国難§Y国境の遊牧民への無防備§!の侵攻度が§R10%§!以上である。"
+ empire_of_china_nomadic_border_events.3.tooltip:0 "§Y[From.GetName]§!：\n国難§Y国境の遊牧民への無防備§!の侵攻度が§R10%§!以上である。"
  empire_of_china_nomadic_border_events.4.t:0 "[From.GetUsableName]での恐慌"
  empire_of_china_nomadic_border_events.4.d:0 "[From.GetUsableName]へ脅威を与える恐怖が拡散する中で、[From.GetAdjective][From.Monarch.GetTitle]は権威維持のための厳しい戦いに直面しています。彼らの中にいる我々の諜報員たちは、すぐにでも、不満によるあからさまな反逆や[From.Monarch.GetTitle]の権威の暴落が噴出すると予想しています…中国の豊かさを自らの手につかむ絶好の機会を提供しています。"
  empire_of_china_nomadic_border_events.4.opt.manchu:0 "八旗隊を招集せよ！"
  empire_of_china_nomadic_border_events.4.opt:0 "中国は我々のものだ！"
- empire_of_china_nomadic_border_events.4.tooltip:0 "§Y[From.GetName]§!:\n国難§Y国境の遊牧民への無防備§!の進行度が§R75%§!以上である。"
+ empire_of_china_nomadic_border_events.4.tooltip:0 "§Y[From.GetName]§!：\n国難§Y国境の遊牧民への無防備§!の進行度が§R75%§!以上である。"
  empire_of_china_nomadic_border_events.5.t:0 "[emperor_of_china.GetAdjective]の懸念の払拭"
  empire_of_china_nomadic_border_events.5.d:0 "我々はもはや[emperor_of_china.GetUsableName]への脅威ではないと考えられているので、彼らの属国は再度彼らの支配されることを甘んじて受け入れています。"
  empire_of_china_nomadic_border_events.5.d.disaster:0 "我々の脅威に対する懸念は、国の内部結束を脅かす[emperor_of_china.GetUsableName]に対する他の脅威が上回ってきた。今が攻撃する時かもしれない！"
