--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -391,10 +391,10 @@
  desc_loyalty_to_the_land_policy:0 "A bruise in the sky, purple clouds partly lighted by the moon. We feel it like a bruise in our skin. To abandon this land is to abandon ourselves."
  commercial_tribes_policy:0 "Commercial Tribes"
  desc_commercial_tribes_policy:0 "Our commercial network has been notably expanded and now our merchants can cover a significant amount of land. Where there is a will, there is a way."
- war_horses_policy:0 "War Horses"
- desc_war_on_horses:1 "We protect our horses as much as we protect ourselves. Their speed and endurance have helped us on numerous occasions and are the reason why our ambitions of expansion can reach almost impossible limits. What a simple man travels in one week, we raze in one day."
- the_best_defense_policy:0 "The Best Defense"
- desc_the_best_defense_policy:0 "The best defense is actually... a good defense. We have drawn inspiration from other armies in order to create a superior version of our armour that can endure the harshness of our battles, without affecting mobility."
+ war_horses_policy:0 "軍馬"
+ desc_war_on_horses:1 "我々は自身を守るかのように馬を守っている。馬の機動性と耐久性は幾度となく助けてくれ、拡張という野望を際限なく推し進められる理由でもある。万夫が一週間移動に掛かっている行程も、我々は一日で掠奪まで為すのだ！"
+ the_best_defense_policy:0 "最高の防衛"
+ desc_the_best_defense_policy:0 "最高の防衛とは、失点のない防衛のことだ。我々は他国の軍隊から着想を得て、機動性を損なうことなく過酷な戦場に耐えうる優れた陸軍を創り出した。"
  omne_datum_optimum_policy:0 "全ての善き贈り物"
  desc_omne_datum_optimum_policy:0 "信者たちは、信仰とは心の葛藤だけでなく身体の葛藤でもあることをようやく理解しつつある。我々の修道院は、今では兵士を獲得する絶好の場所となっている。"
  wielders_of_the_flaming_sword_policy:0 "炎の聖剣を振るうもの"
