--- a/source/localisation/popserror_l_english.yml
+++ b/source/localisation/popserror_l_english.yml
@@ -9,7 +9,7 @@
  POPS_invalid-country-code:0 "国名コードが無効だ"
  POPS_invalid-language-code:0 "言語コードが無効だ"
  POPS_invalid-ISO-8601-format:0 "日付形式が無効だ"
- POPS_parse-failure:0 "クライアント障害 (解析)"
- POPS_unsupported-account-details-keys:0 "クライアント障害 (サポートされていないキー)"
- POPS_invalid-script-code:0 "クライアント障害 (無効なスクリプト)"
+ POPS_parse-failure:0 "クライアント障害（解析）"
+ POPS_unsupported-account-details-keys:0 "クライアント障害（サポートされていないキー）"
+ POPS_invalid-script-code:0 "クライアント障害（無効なスクリプト）"
  POPS_UNEXPECTED_ERROR:0 "サインインに失敗しました。インターネット接続を確認し、もう一度実行してみて下さい。"
